fixes to typography bugs for gd

--- a/browser/installer/custom.properties
+++ b/browser/installer/custom.properties
@@ -87,7 +87,7 @@ UN_CONFIRM_PAGE_TITLE=Dì-stàlaich $BrandFullName
 UN_CONFIRM_PAGE_SUBTITLE=Thoir $BrandShortName às a' coimpiutair agad.
 UN_CONFIRM_UNINSTALLED_FROM=Thèid $BrandShortName a dhì-stàladh on àite a leanas:
 UN_CONFIRM_CLICK=Briog air "Dì-stàlaich" gus leantainn ort.
-UN_REMOVE_PROFILES=Sguab às mo dhàta pearsanta 's mo &roghainnean gnàthaichte a tha co-cheangailte ri $BrandShortName
+UN_REMOVE_PROFILES=Sguab às mo dhàta pearsanta 's mo &roghainnean gnàthaichte aig $BrandShortName
 UN_REMOVE_PROFILES_DESC=Sguabaidh seo às na comharraidhean-lìn, faclan-faire sàbhailaichte, briosgaidean is roghainnean gnàthaichte agad gu buan. Dh'fhaodadh gum b' fhearr leat am fiosrachadh seo a chumail ma tha dùil agad tionndadh eile de $BrandShortName a stàladh uaireigin eile.
 
 BANNER_CHECK_EXISTING=A' sgrùdadh an stàlaidh làithrich…
@@ -95,11 +95,11 @@ BANNER_CHECK_EXISTING=A' sgrùdadh an stàlaidh làithrich…
 STATUS_INSTALL_APP=A' stàladh $BrandShortName…
 STATUS_INSTALL_LANG=A' stàladh nam faidhlichean cànain (${AB_CD})…
 STATUS_UNINSTALL_MAIN=A' dì-stàladh $BrandShortName…
-STATUS_CLEANUP=Beagan obrach-taige…
+STATUS_CLEANUP=Beagan obrach-taighe…
 
 # _DESC strings support approximately 65 characters per line.
 # One line
-OPTIONS_SUMMARY=Tagh an seòrsa de shuidheachadh as fhearr le is briog air "Air adhart" an uairsin.
+OPTIONS_SUMMARY=Tagh an seòrsa de shuidheachadh as fhearr le is briog air &quot;Air adhart&quot; an uairsin.
 # One line
 OPTION_STANDARD_DESC=Thèid $BrandShortName a stàladh leis na roghainnean as cumanta.
 OPTION_STANDARD_RADIO=&Stàladh bunaiteach
