--- a/browser/installer/override.properties
+++ b/browser/installer/override.properties
@@ -67,7 +67,7 @@ CancelBtn=Sguir dheth
 CloseBtn=&Dùin
 BrowseBtn=&Rannsaich…
 ShowDetailsBtn=Seall am mion-fhiosracha&dh
-ClickNext=Briog air "Air adhart" gus leantainn air adhart.
+ClickNext=Briog air &quot;Air adhart&quot; gus leantainn air adhart.
 ClickInstall=Briog air "Stàlaich" gus tòiseachadh air an stàladh.
 ClickUninstall=Briog air "Dì-stàlaich" gus tòiseachadh air an dì-stàladh.
 Completed=Deiseil
