--- a/mobile/installer/setup.ini
+++ b/mobile/installer/setup.ini
@@ -2,16 +2,17 @@
 [Strings]
 AppShortName=%MOZ_APP_DISPLAYNAME%
 AppLongName=Mozilla %MOZ_APP_DISPLAYNAME%
-WindowCaption=Suidheachadh Mozilla %MOZ_APP_DISPLAYNAME%
-InstallTo=Stàlaich %MOZ_APP_DISPLAYNAME% gu
+WindowCaption=Mozilla %MOZ_APP_DISPLAYNAME% Setup
+InstallTo=Install %MOZ_APP_DISPLAYNAME% to
 Install=Stàlaich
 Cancel=Sguir dheth
-InstalledSuccessfully=Chaidh Mozilla %MOZ_APP_DISPLAYNAME% a stàladh gu soirbheachail.
-ExtractionError=Mearachd le às-tharraing na tasglainne:
+InstalledSuccessfully=Mozilla %MOZ_APP_DISPLAYNAME% has been installed successfully.
+ExtractionError=Mearachd le às-tharraing an tasg-lainn:
 ThereWereErrors=Thachair mearachdan rè an stàlaidh:
 CreatingUserProfile=A' cruthachadh clàr-aithne cleachdaiche. Fuirich ort...
-UninstallCaption=Dì-stàladh Mozilla %MOZ_APP_DISPLAYNAME%
-FilesWillBeRemoved=Thèid a h-uile faidhle a thoirt air falbh o
+UninstallCaption=Mozilla %MOZ_APP_DISPLAYNAME% Uninstall
+FilesWillBeRemoved=Thèid a h-uile faidhle a thoirt à
 AreYouSure=A bheil thu cinnteach?
-InstallationNotFound=Cha deach stàladh Mozilla %MOZ_APP_DISPLAYNAME% a lorg.
-UninstalledSuccessfully=Chaidh Mozilla %MOZ_APP_DISPLAYNAME% a dhì-stàladh gu soirbheachail.
+InstallationNotFound=Mozilla %MOZ_APP_DISPLAYNAME% installation not found.
+UninstalledSuccessfully=Mozilla %MOZ_APP_DISPLAYNAME% has been uninstalled successfully.
+
