--- a/toolkit/chrome/mozapps/profile/profileSelection.properties
+++ b/toolkit/chrome/mozapps/profile/profileSelection.properties
@@ -34,4 +34,4 @@ profileCreationFailedTitle=Dh'fhàillig cruthachadh na pròifile
 profileExists=Tha pròifil ann mu thràth air a bheil an t-ainm seo. Tagh ainm eile.
 profileExistsTitle=Pròifil ann mu thràth
 profileFinishText=Briog air "Crìochnaich" gus a' phròifil ùr seo a chruthachadh.
-profileFinishTextMac=Briog air "Dèanta" gus a' phròifil ùr seo a chruthachadh.
+profileFinishTextMac=Briog air &quot;Dèanta&quot; gus a' phròifil ùr seo a chruthachadh.
