--- a/browser/chrome/browser/browser.properties
+++ b/browser/chrome/browser/browser.properties
@@ -241,7 +241,7 @@ ctrlTab.showAll.label=;Seall na #1 taba gu lèir;Seall an #1 thaba; Seall na #1 
 
 # LOCALIZATION NOTE (addKeywordTitleAutoFill): %S will be replaced by the page's title
 # Used as the bookmark name when saving a keyword for a search field.
-addKeywordTitleAutoFill=Lorg %S
+addKeywordTitleAutoFill=Lorg air %S
 
 extensions.{972ce4c6-7e08-4474-a285-3208198ce6fd}.name=Bunaiteach
 extensions.{972ce4c6-7e08-4474-a285-3208198ce6fd}.description=Seo an coltas bunaiteach.
