--- a/toolkit/chrome/mozapps/extensions/update.properties
+++ b/toolkit/chrome/mozapps/extensions/update.properties
@@ -1,5 +1,5 @@
-mismatchCheckNow=Cuir sùil an-dràsta
-mismatchCheckNowAccesskey=C
+mismatchCheckNow=Thoir sùil an-dràsta
+mismatchCheckNowAccesskey=o
 mismatchDontCheck=Na cuir sùil
 mismatchDontCheckAccesskey=N
 installButtonText=Stàlaich an-dràsta
