--- a/toolkit/chrome/passwordmgr/passwordmgr.properties
+++ b/toolkit/chrome/passwordmgr/passwordmgr.properties
@@ -48,7 +48,7 @@ notNowButtonText = &Na cum an cuimhne an turas seo
 notifyBarNotNowButtonText = Chan ann an-dràsta
 notifyBarNotNowButtonAccessKey = N
 neverForSiteButtonText = Na cu&m an cuimhne gu sìorraidh bràth
-notifyBarNeverForSiteButtonText = Chan ann air an duilleag seo gu bràth
+notifyBarNeverForSiteButtonText = Chan ann air an duilleag seo idir
 notifyBarNeverForSiteButtonAccessKey = l
 rememberButtonText = &Cum an cuimhne
 notifyBarRememberButtonText = Cum an cuimhne
