--- a/browser/chrome/browser/browser.properties
+++ b/browser/chrome/browser/browser.properties
@@ -150,7 +150,7 @@ starButtonOff.tooltip=Cruthaich comharra-lìn dhan duilleag seo
 offlineApps.available=Tha an làrach seo (%S) ag iarraidh dàta a shàbhaladh air a' choimpiutair agad a chum cleachdadh far loidhne.
 offlineApps.allow=Ceadaich
 offlineApps.allowAccessKey=A
-offlineApps.never=Chan ann air an duilleag seo gu bràth
+offlineApps.never=Chan ann air an duilleag seo idir
 offlineApps.neverAccessKey=l
 offlineApps.notNow=Chan ann an-dràsta
 offlineApps.notNowAccessKey=N
@@ -182,7 +182,7 @@ pausedDownloads=#1 luchdadh na stad; #1 luchdadh na stad;#1 luchdadh nan stad;#1
 
 # Edit Bookmark UI
 editBookmarkPanel.pageBookmarkedTitle=Chaidh comharra-lìn a chruthachadh
-editBookmarkPanel.pageBookmarkedDescription=Cumaidh %S an duilleag seo na chuimhne dhut gu bràth.
+editBookmarkPanel.pageBookmarkedDescription=Cumaidh %S an duilleag seo 'na chuimhne dhut an-còmhnaidh.
 editBookmarkPanel.bookmarkedRemovedTitle=Comharra-lìn air a thoirt air falbh
 editBookmarkPanel.editBookmarkTitle=Deasaich an comharra-lìn seo
 
@@ -197,7 +197,7 @@ editBookmark.removeBookmarks.label=Thoir air falbh #1 comharra-lìn;Thoir air fa
 
 # LOCALIZATION NOTE (geolocation.shareLocation geolocation.dontShareLocation): 
 #If you're having trouble with the word Share, please use Allow and Block in your language.
-geolocation.shareLocation=Leig fios mun àite
+geolocation.shareLocation=Leigeil fios mun àite
 geolocation.shareLocation.accesskey=L
 geolocation.dontShareLocation=Na leig fios mun àite
 geolocation.dontShareLocation.accesskey=o
