--- a/browser/chrome/browser/quitDialog.properties
+++ b/browser/chrome/browser/quitDialog.properties
@@ -1,10 +1,10 @@
 quitDialogTitle=Fàg %S
 restartDialogTitle=Ath-thòisich %S
 
-quitTitle=&Fàg seo
+quitTitle=&Fàg an-seo
 restartTitle=&Ath-thòisich
 cancelTitle=&Sguir dheth
-saveTitle=&Sàbhail is fàg seo
+saveTitle=&Sàbhail is fàg an-seo
 neverAsk=Na faighnich dhìom an ath-thuras
 message=A bheil thu ag iarraidh gun sàbhail %S na tabaichean is uinneagan dhut gus an ath-thuras a thòischeas e?
 messageNoWindows=A bheil thu ag iarraidh gun sàbhail %S na tabhaichean dhut gus an ath-thuras a thòisicheas e?
