--- a/browser/chrome/browser/shellservice.properties
+++ b/browser/chrome/browser/shellservice.properties
@@ -1,7 +1,7 @@
 optionsLabel=&Roghainnean %S
 safeModeLabel=&Modh tèarainte %S
 setDefaultBrowserTitle=Am brabhsair bunaiteach
-setDefaultBrowserMessage=Chan eil %S 'na bhrabhsair bunaiteach agad an-dràsta. A bheil thu airson a shuidheachadh mar bhrabhsair bunaiteach?
+setDefaultBrowserMessage=Chan eil %S 'na bhrabhsair bunaiteach agad an-dràsta. A bheil thu airson a shuidheachadh mar am brabhsair bunaiteach?
 setDefaultBrowserDontAsk=Ceasnaich seo gach turas a thòisicheas %S.
 alreadyDefaultBrowser=Tha %S 'na bhrabhsair bunaiteach agad mu thràth.
 desktopBackgroundLeafNameWin=Deasg Firefox.bmp
