--- a/browser/installer/custom.properties
+++ b/browser/installer/custom.properties
@@ -63,7 +63,7 @@ SUMMARY_PAGE_SUBTITLE=Deisil gus tòiseachadh air stàladh $BrandShortName
 SUMMARY_INSTALLED_TO=Thèid $BrandShortName a stàladh san àite a leanas:
 SUMMARY_REBOOT_REQUIRED_INSTALL=Dh'fhaodadh gum bi agad an coimpiutair agad ath-thòiseachadh gus crìoch a chur air an stàladh.
 SUMMARY_REBOOT_REQUIRED_UNINSTALL=Dh'fhaodadh gum bi agad an coimpiutair agad ath-thòiseachadh gus crìoch a chur air an dì-stàladh.
-SUMMARY_TAKE_DEFAULTS=Cleachd $BrandShortName mar &bhrabhsair bunaiteach agam
+SUMMARY_TAKE_DEFAULTS=Cleachd $BrandShortName mar am &brabhsair bunaiteach agam
 SUMMARY_INSTALL_CLICK=Briog air "Stàlaich" gus leantainn air adhart.
 SUMMARY_UPGRADE_CLICK=Briog air "Ùraich" gus leantainn air adhart.
 SURVEY_TEXT=&Nach innis thu dhuinn dè do bheachd air $BrandShortName
