A few more tweaks to keyboard shortcuts, consistency of terminology for gd

--- a/security/manager/chrome/pipnss/pipnss.properties
+++ b/security/manager/chrome/pipnss/pipnss.properties
@@ -329,7 +329,7 @@ DelModuleIntSuccess=Shoirbhich leat le sguabadh às a' mhòideil thèarainteachd
 DelModuleExtSuccess=Shoirbhich leat le sguabadh às a' mhòideil thèarainteachd on taobh a-muigh
 ForcedBackup1=Bu chòir dhut lethbhreac-glèidhidh fo dhìon facail-fhaire a dhèanamh dhen teisteanas tèarainteachd ùr agad agus dhe na h-iuchraichean prìobhaideachd a tha ris.
 ForcedBackup2=Ma chailleas tu inntrigeadh dhan iuchair phrìobhaideach agad 's tu air am facal-faire tèarainteachd phearsanta agad a dhìochuimhneachadh, no an cois truailleadh faidhle, 's urrainn dhut an iuchair phrìobhaideach is an teisteanas aiseag on lethbhreac-ghlèidhidh seo.
-ForcedBackup3=Briog air "Ceart" gus lethbhreac a dhèanamh. Mas urrainn, bu chòir dhut lethbhreac glèidhidh air stòras dàta eile a dhèanamh 's a chumail sàbhailte.
+ForcedBackup3=Briog air "Ceart ma-tha" gus lethbhreac a dhèanamh. Mas urrainn, bu chòir dhut lethbhreac glèidhidh air stòras dàta eile a dhèanamh 's a chumail sàbhailte.
 UnknownCertIssuer=(Foillsichear neo-aithnichte)
 UnknownCertOrg=(Buidheann neo-aithnichte)
 AVATemplate=%S = %S
