--- a/security/manager/chrome/pippki/pippki.properties
+++ b/security/manager/chrome/pippki/pippki.properties
@@ -120,7 +120,7 @@ certDetails=Sealladair teisteanais:
 notPresent=<Chan eil e 'na phàirt dhen teisteanas>
 unknownIssuer=<Foillsichear neo-aithnichte>
 
-escrowFinalMessage=Na briog air "Ceart" mur eil earbsa agad ann an "%S" gus an iuchair dubh-cheilidh phrìobhaideach agad a dhìon.
+escrowFinalMessage=Na briog air "Ceart ma-tha" mur eil earbsa agad ann an "%S" gus an iuchair dubh-cheilidh phrìobhaideach agad a dhìon.
 
 #Token Manager
 password_not_set=(gun suidheachadh)
