--- a/dom/chrome/dom/dom.properties
+++ b/dom/chrome/dom/dom.properties
@@ -47,7 +47,7 @@ DontAskAgain=&Na faighnich dhìom a-rithist
 JSURLLoadBlockedWarning=Chuir manaidsear na tèarainteachd casg air iarrtas URL javascript: le aon òstair ann an uinneag anns a bheil rudeigin le òstair eile ri fhaicinn.
 WindowCloseBlockedWarning=Chan eil cead aig sgriobtaichean uinneagan a dhùnach nach deach am fosgladh le sgriobt.
 OnBeforeUnloadPreMessage=A bheil thu cinnteach gu bheil thu airson an duilleag seo fhàgail?
-OnBeforeUnloadPostMessage=Briog air "Ceart" gus leantainn ort no air "Sguir dheth" gus fuireach air an duilleag seo.
+OnBeforeUnloadPostMessage=Briog air "Ceart ma-tha" gus leantainn ort no air "Sguir dheth" gus fuireach air an duilleag seo.
 DocumentAllUsed=Chaidh am feart neo-bhun-tomhasach "document.all" a chleachdadh. Cleachd an tionndadh bun-tomhasach W3C "document.getElementById()" 'na àite.
 GlobalScopeElementReference=Chaidh iomradh a dhèanamh air eileamaid le ID/NAME san sgòp uile-choitcheann. Cleachd document.getElementById() bun-tomhasach na àite.
 UseOfCaptureEventsWarning=Cha mholamaid cleachdadh captureEvents() tuilleadh. Cleachd am modh DOM 2 addEventListener() gus an còd agad ùrachadh. Cuir sùil air an duilleag seo airson barrachd fiosrachaidh http://developer.mozilla.org/en/docs/DOM:element.addEventListener
