Tweaking the terminology re Download in gd, changes to search plugins

--- a/browser/chrome/browser/places/places.properties
+++ b/browser/chrome/browser/places/places.properties
@@ -105,7 +105,7 @@ recentlyBookmarkedTitle=Comharraidhean-lìn faisg ort
 recentTagsTitle=Tagaichean faisg ort
 
 OrganizerQueryHistory=Eachdraidh
-OrganizerQueryDownloads=Luchdaidhean a-nuas
+OrganizerQueryDownloads=Na chaidh a luchdadh a-nuas
 OrganizerQueryAllBookmarks=A h-uile comharra-lìn
 
 # LOCALIZATION NOTE (tagResultLabel) :
