--- a/toolkit/chrome/mozapps/downloads/downloads.properties
+++ b/toolkit/chrome/mozapps/downloads/downloads.properties
@@ -20,20 +20,20 @@ downloadErrorGeneric=Cha ghabh an luchdadh a-nuas a shàbhaladh a chionn 's gun 
 
 quitCancelDownloadsAlertTitle=A bheil thu airson sgur de gach luchdadh a-nuas?
 quitCancelDownloadsAlertMsg=Ma sguireas tu dheth an-dràsta, thèid casg a chur air aon luchdadh a-nuas. A bheil thu cinnteach gu bheil thu airson leantainn ort?
-quitCancelDownloadsAlertMsgMultiple=Ma sguireas tu dheth an-dràsta, thèid casg a chur air %S luchdaidhean a-nuas. A bheil thu cinnteach gu bheil thu airson leantainn ort?
+quitCancelDownloadsAlertMsgMultiple=Ma sguireas tu dheth an-dràsta, thèid casg a chur air luchdadh a-nuas de %S rudan. A bheil thu cinnteach gu bheil thu airson leantainn ort?
 quitCancelDownloadsAlertMsgMac=Ma sguireas tu dheth an-dràsta, thèid casg a chur air aon luchdadh a-nuas. A bheil thu cinnteach gu bheil thu airson leantainn ort?
-quitCancelDownloadsAlertMsgMacMultiple=Ma sguireas tu dheth an-dràsta, thèid casg a chur air %S luchdaidhean a-nuas. A bheil thu cinnteach gu bheil thu airson leantainn ort?
+quitCancelDownloadsAlertMsgMacMultiple=Ma sguireas tu dheth an-dràsta, thèid casg a chur air luchdadh a-nuas de %S rudan. A bheil thu cinnteach gu bheil thu airson leantainn ort?
 offlineCancelDownloadsAlertTitle=A bheil thu airson sgur de gach luchdadh a-nuas?
 offlineCancelDownloadsAlertMsg=Ma thèid thu far loidhne an-dràsta, thèid casg a chur air aon luchdadh a-nuas. A bheil thu cinnteach gu bheil thu airson a dhol far loidhne?
-offlineCancelDownloadsAlertMsgMultiple=Ma thèid thu far loidhne an-dràsta, thèid casg a chur air %S luchdaidhean a-nuas. A bheil thu cinnteach gu bheil thu airson a dhol far loidhne?
+offlineCancelDownloadsAlertMsgMultiple=Ma thèid thu far loidhne an-dràsta, thèid casg a chur air luchdadh a-nuas de %S rudan. A bheil thu cinnteach gu bheil thu airson a dhol far loidhne?
 enterPrivateBrowsingCancelDownloadsAlertTitle=A bheil thu airson sgur de gach luchdadh a-nuas?
 enterPrivateBrowsingCancelDownloadsAlertMsg=Ma thòisicheas tu air brabhsadh prìobhaideach an-dràsta, thèid casg a chur air aon luchdadh a-nuas. A bheil thu cinnteach gu bheil thu airson tòiseachadh air brabhsadh prìobhaideach?
-enterPrivateBrowsingCancelDownloadsAlertMsgMultiple=Ma thòisicheas tu air brabhsadh prìobhaideach an-dràsta, thèid casg a chur air %S luchdaidhean a-nuas. A bheil thu cinnteach gu bheil thu airson tòiseachadh air brabhsadh prìobhaideach?
+enterPrivateBrowsingCancelDownloadsAlertMsgMultiple=Ma thòisicheas tu air brabhsadh prìobhaideach an-dràsta, thèid casg a chur air luchdadh a-nuas de %S rudan. A bheil thu cinnteach gu bheil thu airson tòiseachadh air brabhsadh prìobhaideach?
 leavePrivateBrowsingCancelDownloadsAlertTitle=A bheil thu airson sgur de gach luchdadh a-nuas?
 leavePrivateBrowsingCancelDownloadsAlertMsg=Ma sguireas tu dhen bhrabhsadh phrìobhaideach an-dràsta, thèid casg a chur air aon luchdadh a-nuas. A bheil thu cinnteach gu bheil thu airson sgur dhen bhrabhsadh phrìobhaideach?
-leavePrivateBrowsingCancelDownloadsAlertMsgMultiple=Ma sguireas tu dhen bhrabhsadh phrìobhaideach an-dràsta, thèid casg a chur air %S luchdaidhean a-nuas. A bheil thu cinnteach gu bheil thu airson sgur dhen bhrabhsadh phrìobhaideach?
+leavePrivateBrowsingCancelDownloadsAlertMsgMultiple=Ma sguireas tu dhen bhrabhsadh phrìobhaideach an-dràsta, thèid casg a chur air luchdadh a-nuas de %S rudan. A bheil thu cinnteach gu bheil thu airson sgur dhen bhrabhsadh phrìobhaideach?
 cancelDownloadsOKText=Sguir de 1 luchdadh a-nuas
-cancelDownloadsOKTextMultiple=Sguir de %S luchdaidhean a-nuas
+cancelDownloadsOKTextMultiple=Sguir de luchdadh a-nuas de %S rudan
 dontQuitButtonWin=Na sguir
 dontQuitButtonMac=Na sguir
 dontGoOfflineButton=Fuirich air loidhne
@@ -117,4 +117,4 @@ fileExecutableSecurityWarningDontAsk=Na faighnich dhìom a-rithist.
 displayNameDesktop=Deasg
 
 # Desktop folder name for downloaded files
-downloadsFolder=Luchdaidhean a-nuas
+downloadsFolder=Na chaidh a luchdadh a-nuas
