correcting some terminology inconsistencies for gd

--- a/browser/chrome/browser/pageInfo.properties
+++ b/browser/chrome/browser/pageInfo.properties
@@ -51,7 +51,7 @@ mediaImg=Dealbh
 mediaBGImg=Cùlaibh
 mediaObject=Ball
 mediaEmbed=Neadaich
-mediaLink=Ìomhaigh
+mediaLink=Ìomhaigheag
 mediaInput=Cuir a-steach
 mediaFileSize=%S kB
 mediaSize=%Spct × %Spct
