--- a/browser/chrome/browser/places/places.properties
+++ b/browser/chrome/browser/places/places.properties
@@ -7,7 +7,7 @@ load-js-data-url-error=Chan urrainn dhut javascript no seòlaidhean dàta a luch
 noTitle=(gun tiotal)
 
 bookmarksMenuName=Clàr-taice nan comharra-lìn
-bookmarksToolbarName=Crann-inneil nan comharra-lìn
+bookmarksToolbarName=Bàr nan comharra-lìn
 bookmarksMenuEmptyFolder=(Falamh)
 
 # LOCALIZATION NOTE (bookmarksBackupFilename) :
