--- a/toolkit/chrome/global/customizeToolbar.properties
+++ b/toolkit/chrome/global/customizeToolbar.properties
@@ -1,7 +1,7 @@
-enterToolbarTitle=Crann-inneal ùr
-enterToolbarName=Cuir a-steach ainm airson na croinn-inneal seo:
-enterToolbarDup=Tha crann-inneal ann mu thràth air a bheil "%S". Cuir a-steach ainm eile.
-enterToolbarBlank=Feumaidh tu ainm a chur a-steach gus crann-inneal ùr a chruthachadh.
+enterToolbarTitle=Bàr-inneil ùr
+enterToolbarName=Cuir a-steach ainm airson a' bhàir-inneil seo:
+enterToolbarDup=Tha bàr-inneil ann mu thràth air a bheil "%S". Cuir a-steach ainm eile.
+enterToolbarBlank=Feumaidh tu ainm a chur a-steach gus bàr-inneil ùr a chruthachadh.
 separatorTitle=Sgaradair
 springTitle=Beàrn sùbailte
 spacerTitle=Beàrn
