--- a/toolkit/chrome/places/places.properties
+++ b/toolkit/chrome/places/places.properties
@@ -1,5 +1,5 @@
 BookmarksMenuFolderTitle=Clàr-taice nan comharra-lìn
-BookmarksToolbarFolderTitle=Crann-inneil nan comharra-lìn
+BookmarksToolbarFolderTitle=Bàr nan comharra-lìn
 UnsortedBookmarksFolderTitle=Comharraidhean-lìn gun seòrsachadh
 TagsFolderTitle=Tagaichean
 
