some language tweaks to gd

--- a/browser/chrome/browser/preferences/preferences.properties
+++ b/browser/chrome/browser/preferences/preferences.properties
@@ -40,7 +40,7 @@ languageCodeFormat=%1$S [%2$S]
 #### Downloads
 
 desktopFolderName=Deasg
-downloadsFolderName=Na chaidh a luchdadh a-nuas
+downloadsFolderName=Luchdaidhean a-nuas
 chooseDownloadFolderTitle=Tagh pasgan nan luchdaidhan a-nuas:
 
 #### Applications
