--- a/browser/installer/mui.properties
+++ b/browser/installer/mui.properties
@@ -90,4 +90,4 @@ MUI_UNTEXT_ABORT_SUBTITLE=Cha do shoirbhich leis an dì-stàladh.
 MUI_UNTEXT_FINISH_INFO_TITLE=Tha draoidh an dì-stàlaidh aig $BrandFullNameDA a' crìochnachadh
 MUI_UNTEXT_FINISH_INFO_TEXT=Chaidh $BrandFullNameDA a dhì-stàladh on choimpiutair agad.\n\nBriog air "Cuir crìoch air" gus an draoidh seo a dhùnadh.
 MUI_UNTEXT_FINISH_INFO_REBOOT=Feumaidh an coimpiutair agad tòiseachadh a-rithist gus crìoch a chur air dì-stàladh $BrandFullNameDA. A bheil thu airson ath-thòiseachadh an-dràsta?
-MUI_UNTEXT_ABORTWARNING=A bheil thu cinnteach gu bheil thu airson casg a chur air dì-stàladh Dhíshuiteáil $BrandFullName?
+MUI_UNTEXT_ABORTWARNING=A bheil thu cinnteach gu bheil thu airson casg a chur air dì-stàladh $BrandFullName?
