--- a/browser/installer/override.properties
+++ b/browser/installer/override.properties
@@ -101,11 +101,11 @@ ErrorDecompressing=Mearachd ann an dì-dhùmhlachadh dàta! Stàlaiche air a thr
 ErrorRegistering=Mearachd ann an clàrachadh DLL
 ExecShell="ExecShell: "
 Exec="Cuir an gnìomh: "
-Extract="As-tharraing: "
-ErrorWriting="As-tharraing: mearachd ann an sgrìobhaidh gu faidhle "
+Extract="Às-tharraing: "
+ErrorWriting="Às-tharraing: mearachd ann an sgrìobhaidh gu faidhle "
 InvalidOpcode=Stàlaichear air a thruailleadh: opcode mì-dhligheadh
 NoOLE="Gun OLE airson: "
-OutputFolder="Pasgan as-chur: "
+OutputFolder="Pasgan às-chur: "
 RemoveFolder="Thoir air falbh am pasgan: "
 RenameOnReboot="Cuir ainm ùr air nuair a dh'ath thòisicheas e: "
 Rename="Cuir ainm ùr air: "
