--- a/toolkit/chrome/global/languageNames.properties
+++ b/toolkit/chrome/global/languageNames.properties
@@ -154,7 +154,7 @@ so = Somàilis
 sq = Albanais
 sr = Seàrbais
 ss = Siswati
-st = Sotho a Deas
+st = Soto a Deas
 su = Sundanais
 sv = Suainis
 sw = Swahili
