--- a/toolkit/chrome/mozapps/downloads/downloads.properties
+++ b/toolkit/chrome/mozapps/downloads/downloads.properties
@@ -117,4 +117,4 @@ fileExecutableSecurityWarningDontAsk=Na faighnich dhìom a-rithist.
 displayNameDesktop=Deasg
 
 # Desktop folder name for downloaded files
-downloadsFolder=Na chaidh a luchdadh a-nuas
+downloadsFolder=Luchdaidhean a-nuas
