--- a/toolkit/chrome/mozapps/update/updates.properties
+++ b/toolkit/chrome/mozapps/update/updates.properties
@@ -35,7 +35,7 @@ askLaterButton=Faighnich dhìom às a dhèidh seo
 askLaterButton.accesskey=a
 noThanksButton=Na ùraich, mòran taing
 noThanksButton.accesskey=N
-updateButton_minor=Ùraich %S
+updateButton_minor=Ùrachadh %S
 updateButton_minor.accesskey=r
 updateButton_major=Faigh an tionndadh ùr
 updateButton_major.accesskey=g
