--- a/browser/installer/custom.properties
+++ b/browser/installer/custom.properties
@@ -58,7 +58,7 @@ OPTIONS_PAGE_TITLE=Modh an t-suidheachaidh
 OPTIONS_PAGE_SUBTITLE=Tagh na roghainnean suidheachaidh
 SHORTCUTS_PAGE_TITLE=Rèitich na h-ath-ghoiridean
 SHORTCUTS_PAGE_SUBTITLE=Cruthaich ìomhaigheagan nam prògram
-SUMMARY_PAGE_TITLE=Gearr chunntas
+SUMMARY_PAGE_TITLE=Gearr-chunntas
 SUMMARY_PAGE_SUBTITLE=Deiseil gus tòiseachadh air stàladh $BrandShortName
 SUMMARY_INSTALLED_TO=Thèid $BrandShortName a stàladh san àite a leanas:
 SUMMARY_REBOOT_REQUIRED_INSTALL=Dh'fhaodadh gum bi agad an coimpiutair agad ath-thòiseachadh gus crìoch a chur air an stàladh.
@@ -84,7 +84,7 @@ ERROR_CREATE_DIRECTORY_PREFIX=Mearachd ann an cruthachadh a' phasgain:
 ERROR_CREATE_DIRECTORY_SUFFIX=Briog air "Sguir dheth" gus casg a chur air an stàladh no\nFeuch ris a-rithist gus feuchainn ris as ùr.
 
 UN_CONFIRM_PAGE_TITLE=Dì-stàlaich $BrandFullName
-UN_CONFIRM_PAGE_SUBTITLE=Thoir $BrandShortName às a' coimpiutair agad.
+UN_CONFIRM_PAGE_SUBTITLE=Thoir $BrandShortName às a' choimpiutair agad.
 UN_CONFIRM_UNINSTALLED_FROM=Thèid $BrandShortName a dhì-stàladh on àite a leanas:
 UN_CONFIRM_CLICK=Briog air "Dì-stàlaich" gus leantainn ort.
 UN_REMOVE_PROFILES=Sguab às mo dhàta pearsanta 's mo &roghainnean gnàthaichte aig $BrandShortName
