consistency of terminology, various spelling tweaks, a couple of missed strings for gd

--- a/browser/chrome/browser/browser.properties
+++ b/browser/chrome/browser/browser.properties
@@ -128,7 +128,7 @@ menuRestoreAllWindows.accesskey=A
 # LOCALIZATION NOTE (menuUndoCloseWindowLabel): Semi-colon list of plural forms.
 # See: http://developer.mozilla.org/en/docs/Localization_and_Plurals
 # #1 Window Title, #2 Number of tabs
-menuUndoCloseWindowLabel=#1 (agus #2 taba eile);#1 (agus #2 taba eile);#1 (agus #2 thaba eile);#1 (agus #2 tabaichean eile)
+menuUndoCloseWindowLabel=#1 (agus #2 taba eile);#1 (agus #2 thaba eile);#1 (agus #2 tabaichean eile);#1 (agus #2 taba eile)
 menuUndoCloseWindowSingleTabLabel=#1
 
 # Unified Back-/Forward Popup
@@ -178,7 +178,7 @@ identity.ownerUnknown2=(neo aithnichte)
 # #1 number of downloads; #2 time left
 # examples: One active download (2 minutes remaining); 11 paused downloads
 activeDownloads=#1 luchdadh beò (#2); #1 luchdadh beò (#2); #1 luchdadh beò (#2); #1 luchdaidhean beòtha (#2)
-pausedDownloads=#1 luchdadh na stad; #1 luchdadh na stad;#1 luchdadh nan stad;#1 luchdaidhean nan stad
+pausedDownloads=#1 luchdadh 'na stad; #1 luchdadh 'nan stad;#1 luchdaidhean 'nan stad;#1 luchdadh 'nan stad
 
 # Edit Bookmark UI
 editBookmarkPanel.pageBookmarkedTitle=Chaidh comharra-lìn a chruthachadh
@@ -191,15 +191,15 @@ editBookmarkPanel.editBookmarkTitle=Deasaich an comharra-lìn seo
 # the number of bookmarks to be removed.
 # If this causes problems with localization you can also do "Remove Bookmarks (#1)"
 # instead of "Remove #1 Bookmarks".
-editBookmark.removeBookmarks.label=Thoir air falbh #1 comharra-lìn;Thoir air falbh #1 chomharra-lìn;Thoir air falbh #1 chomharra-lìn;Thoir air falbh #1 comharraidhean-lìn
+editBookmark.removeBookmarks.label=Thoir air falbh #1 chomharra-lìn;Thoir air falbh #1 chomharra-lìn;Thoir air falbh #1 chomharraidhean-lìn;Thoir air falbh #1 comharra-lìn
 
 # Geolocation UI
 
 # LOCALIZATION NOTE (geolocation.shareLocation geolocation.dontShareLocation): 
 #If you're having trouble with the word Share, please use Allow and Block in your language.
-geolocation.shareLocation=Leigeil fios mun àite
-geolocation.shareLocation.accesskey=L
-geolocation.dontShareLocation=Na leig fios mun àite
+geolocation.shareLocation=Nochd d' àite
+geolocation.shareLocation.accesskey=N
+geolocation.dontShareLocation=Na nochd d' àite
 geolocation.dontShareLocation.accesskey=o
 geolocation.siteWantsToKnow=Tha %S airson faighinn a-mach càit a bheil thu.
 # LOCALIZATION NOTE (geolocation.learnMore): Use the unicode ellipsis char, \u2026,
@@ -237,7 +237,7 @@ privateBrowsingNeverAsk=&Na seall an teachdaireachd seo a-rithist
 # LOCALIZATION NOTE (ctrlTab.showAll.label): #1 represents the number
 # of tabs in the current browser window. It will always be 2 at least.
 # See: http://developer.mozilla.org/en/docs/Localization_and_Plurals
-ctrlTab.showAll.label=;Seall na #1 taba gu lèir;Seall an #1 thaba; Seall na #1 tabaichean gu lèir
+ctrlTab.showAll.label=;Seall an #1 thaba gu lèir;Seall na #1 tabaichean; Seall na #1 taba gu lèir
 
 # LOCALIZATION NOTE (addKeywordTitleAutoFill): %S will be replaced by the page's title
 # Used as the bookmark name when saving a keyword for a search field.
