--- a/browser/chrome/browser/places/places.properties
+++ b/browser/chrome/browser/places/places.properties
@@ -3,7 +3,7 @@ deleteDomain=Sguab às an àrainn %S gu h-iomlan
 deleteHostNoSelection=Sguab às òstair
 deleteDomainNoSelection=Sguab às àrainn
 
-load-js-data-url-error=Chan urrainn dhut javascript no seòlaidhean dàta a luchdadh o uinneag na h-eachdraidh no on chrann-taoibh air sgàth adhbharan tèarainteachd.
+load-js-data-url-error=Chan urrainn dhut javascript no seòlaidhean dàta a luchdadh o uinneag na h-eachdraidh no on bhàr-taoibh air sgàth adhbharan tèarainteachd.
 noTitle=(gun tiotal)
 
 bookmarksMenuName=Clàr-taice nan comharra-lìn
@@ -17,17 +17,17 @@ bookmarksMenuEmptyFolder=(Falamh)
 # en-US value if you have to use non-ascii characters.
 bookmarksBackupFilename=Comharraidhean %S.html
 bookmarksBackupFilenameJSON=Comharraidhean %S.json
-bookmarksBackupTitle=Ainm faidhle airson leth-bhreac glèidhidh nan comharra-lìn
+bookmarksBackupTitle=Ainm faidhle airson lethbhreac glèidhidh nan comharra-lìn
 
 bookmarksRestoreAlertTitle=Aisig na comharraidhean-lìn
 bookmarksRestoreAlert=Cuiridh seo na comharraidhean-lìn sa lethbhreac-ghlèidhidh agad an àite na feadhainn làithreach. A bheil thu cinnteach?
 bookmarksRestoreAlertTags=Cuiridh seo na comharraidhean-lìn is na tagaichean sa lethbhreac-ghlèidhidh agad an àite na feadhainn làithreach. A bheil thu cinnteach?
-bookmarksRestoreTitle=Tagh leth-bhreac glèidhidh de chomharraidhean-lìn
+bookmarksRestoreTitle=Tagh lethbhreac glèidhidh de chomharraidhean-lìn
 bookmarksRestoreFilterName=JSON
 bookmarksRestoreFilterExtension=*.json
 
 bookmarksRestoreFormatError=Chan eil taic ann airson a leithid de dh'fhaidhle.
-bookmarksRestoreParseError=Cha ghabh an leth-bhreac glèidhidh a phròiseasadh.
+bookmarksRestoreParseError=Cha ghabh an lethbhreac glèidhidh a phròiseasadh.
 
 bookmarksLivemarkLoading=A' luchdadh comharra-lìn beò…
 bookmarksLivemarkFailed=Dh'fhàillig luchdadh inbhir a' chomharra-lìn.
