--- a/browser/installer/custom.properties
+++ b/browser/installer/custom.properties
@@ -54,7 +54,7 @@ REG_APP_DESC=Tha $BrandShortName a' toirt dhut dòigh shàbhailte is èasgaidh g
 CONTEXT_OPTIONS=R&oghainnean $BrandShortName
 CONTEXT_SAFE_MODE=Modh &tèarainte $BrandShortName
 SAFE_MODE=Am modh tèarainte
-OPTIONS_PAGE_TITLE=Modh an t-suidheachaidh
+OPTIONS_PAGE_TITLE=Seòrsa an t-suidheachaidh
 OPTIONS_PAGE_SUBTITLE=Tagh na roghainnean suidheachaidh
 SHORTCUTS_PAGE_TITLE=Rèitich na h-ath-ghoiridean
 SHORTCUTS_PAGE_SUBTITLE=Cruthaich ìomhaigheagan nam prògram
@@ -111,4 +111,4 @@ OPTION_CUSTOM_RADIO=Stàladh &gnàthaichte
 # The following text replaces the Install button text on the summary page.
 # Verify that the access key for InstallBtn (in override.properties) and
 # UPGRADE_BUTTON is not already used by SUMMARY_TAKE_DEFAULTS.
-UPGRADE_BUTTON=Ù&rachadh
+UPGRADE_BUTTON=Ù&raich
