--- a/browser/installer/override.properties
+++ b/browser/installer/override.properties
@@ -84,8 +84,8 @@ UninstallingSubText=A' dì-stàladh o:
 FileError=Mearachd ann am fosgladh faidhle a chum sgrìobhaidh: \r\n\r\n$0\r\n\r\nBriog air "Abort" gus casg a chur air an stàladh,\r\n"Retry" gus feuchainn ris a-rithist no\r\n"Ignore" gus leum a ghearradh thairis air an fhaidhle seo.
 FileError_NoIgnore=Mearachd ann am fosgladh faidhle a chum sgrìobhaidh: \r\n\r\n$0\r\n\r\nBriog air "Retry" gus feuchainn ris a-rithist no\r\n"Ignore" gus leum a ghearradh thairis air an fhaidhle seo.
 CantWrite="Cha ghabh na leanas a sgrìobhadh: "
-CopyFailed=Dh'fhàillig an leth-bhreac
-CopyTo="Dèan leth-bhreac gu "
+CopyFailed=Dh'fhàillig an lethbhreac
+CopyTo="Dèan lethbhreac gu "
 Registering="A' clàrachadh: "
 Unregistering="A' dì-chlàrachadh: "
 SymbolNotFound="Cha deach an samhla a leanas a lorg: "
@@ -110,7 +110,7 @@ RemoveFolder="Thoir air falbh am pasgan: "
 RenameOnReboot="Cuir ainm ùr air nuair a dh'ath thòisicheas e: "
 Rename="Cuir ainm ùr air: "
 Skipped="Air a leigeil seachad: "
-CopyDetails=Cuir leth-bhreac dhen mion-fhiosrachadh air a' bhòrd-chliopaichean
+CopyDetails=Cuir lethbhreac dhen mion-fhiosrachadh air a' bhòrd-chliopaichean
 LogInstall=Dèan log dhen phròiseas stàlaidh
 Byte=B
 Kilo=K
