--- a/dom/chrome/charsetTitles.properties
+++ b/dom/chrome/charsetTitles.properties
@@ -114,7 +114,7 @@ iso-8859-8-e.title = Eabhra (ISO-8859-8-E)
 windows-1255.title = Eabhra (Windows-1255)
 windows-1256.title = Arabais (Windows-1256)
 x-user-defined.title = Roghnadh a' chleachdaiche
-ibm866.title = Cirilis/Ruiseach (CP-866)
+ibm866.title = Cirilis/Ruisis (CP-866)
 ibm850.title = Siarach (IBM-850)
 ibm852.title = Meadhan-Eòrpach (IBM-852)
 ibm855.title = Cirilis (IBM-855)
@@ -139,7 +139,7 @@ chardet.universal_charset_detector.title    = Uile-choitcheann
 chardet.ja_parallel_state_machine.title     = Seapanais
 chardet.ko_parallel_state_machine.title     = Coireanais
 chardet.zhtw_parallel_state_machine.title   = Sìnis thradaiseanta
-chardet.zhcn_parallel_state_machine.title   = Sìneach simplichte
+chardet.zhcn_parallel_state_machine.title   = Sìnis shimplichte
 chardet.zh_parallel_state_machine.title     = Sìnis
 chardet.cjk_parallel_state_machine.title    = Taobh an Ear na h-Àisea
 chardet.ruprob.title                        = Ruisis
