--- a/dom/chrome/layout/css.properties
+++ b/dom/chrome/layout/css.properties
@@ -45,7 +45,7 @@ PEUnknownProperty=Feart neo-aithnichte "%1$S".
 PEValueParsingError=Mearachd rè pàrsadh an luach airson '%1$S'.
 PEExpectEndValue=Bha dùil ri deireadh an luach ach fhuaradh '%1$S'.
 PESkipAtRuleEOF=deireadh de riaghailt @ neo-aithnichte
-PEUnknownAtRule=Riaghailt @ neo-aithnichte no mearachd ann am pàrsadh riaghailt @ "%1$S".
+PEUnknownAtRule=Riaghailt @ neo-aithnichte no mearachd ann am parsadh riaghailt @ "%1$S".
 PECharsetRuleEOF=sreang charactairean anns an riaghailt @charset
 PECharsetRuleNotString=Bha dùil ri sreang charactairean ach fhuaraidh "%1$S".
 PEGatherMediaEOF=deireadh de liosta meadhain ann an riaghailte @import no @media
@@ -58,7 +58,7 @@ PEMozDocRuleBadFunc=Bha dùil ri url(), url-prefix(), no domain() san riaghailt 
 PEMozDocRuleNotURI=Bha dùil ri URI san riaghailt @-moz-document ach fhuaradh "%1$S".
 PEAtNSPrefixEOF=ro-leasachan namespace anns an riaghailt @namespace
 PEAtNSURIEOF=URI namespace anns an riaghailt @namespace
-PEAtNSUnexpected=Tocan ris nach robh dùil am broinn @namespace: "%1$S".
+PEAtNSUnexpected=Tòcan ris nach robh dùil am broinn @namespace: "%1$S".
 PESkipDeclBraceEOF="}" dùnaidh de bhloc foirghill
 PESkipRSBraceEOF="}" dùnaidh de sheata riaghailtean mì-dhligheach
 PEBadSelectorRSIgnored=Chaidh seata de riaghailtean a leigeil seachad air sgàth droch roghnaicheir.
@@ -68,7 +68,7 @@ PESelectorGroupNoSelector=Bha dùil ri roghnaichear.
 PESelectorGroupExtraCombinator=Co-cheanglaiche air bhogadan.
 PEClassSelEOF=ainm clas
 PEClassSelNotIdent=Bha dùil ri aithnicheadair airson roghnaichear clas ach fhuaradh "%1$S".
-PETypeSelEOF=seòrsa de dh'eileamaid
+PETypeSelEOF=seòrsa na h-eileamaid
 PETypeSelNotType=Bha dùil ri ainm eileamaid no "*" ach fhuaradh "%1$S".
 PEUnknownNamespacePrefix=Ro-leasachan spàs ainm neo-aithnichte "%1$S".
 PEAttributeNameEOF=ainm fearta
@@ -76,19 +76,19 @@ PEAttributeNameExpected=Bha dùil ri aithnicheadair airson ainm fearta ach fhuar
 PEAttributeNameOrNamespaceExpected=Bha dùil ri ainm fearta no spàs ainm ach fhuaradh "%1$S".
 PEAttSelNoBar=Bha dùil ri "|" ach fhuaradh "%1$S".
 PEAttSelInnerEOF=pàirt de roghnaichear fearta
-PEAttSelUnexpected=Tocan ris nach robh dùil ann an roghnaichear fearta: "%1$S".
+PEAttSelUnexpected=Tòcan ris nach robh dùil ann an roghnaichear fearta: "%1$S".
 PEAttSelValueEOF=luach an fhearta
 PEAttSelCloseEOF="]" gus crìoch achur air an roghnaichear fhearta
 PEAttSelNoClose=Bha dùil ri "]" gus crìoch a chur air an roghnaichear fhearta ach fhuaradh "%1$S".
 PEAttSelBadValue=Bha dùil ri roghnaichear no sreang airson luach anns an roghnaichear fhearta ach fhuaradh "%1$S".
 PEPseudoSelEOF=ainm clas fudain no eileamaid fhuadain
 PEPseudoSelBadName=Bha dùil ri aithnicheadair airson clas fuadain no eileamaid fhuadain ach fhuaradh "%1$S".
-PEPseudoSelNonFunc=Fhuaradh tocan feuma an àite clas fuadain no eileamaid fhuadain, no cas mu seach, nuair a bha "%1$S" 'ga leughadh.
+PEPseudoSelNonFunc=Fhuaradh tòcan feuma an àite clas fuadain no eileamaid fhuadain, no cas mu seach, nuair a bha "%1$S" 'ga leughadh.
 PEPseudoSelNotPE=Bha dùil ri eileamaid fhuadain ach fhuaradh "%1$S".
 PEPseudoSelDoubleNot=Chan urrainnear clas fuadain àicheadh "%1$S".
 PEPseudoSelPEInNot=Chan urrainnear eileamaid fhuadain àicheadh "%1$S".
 PEPseudoSelNewStyleOnly=Feumaidh an eileamaid fhuadain seo a bhith dhen chruth "::": "%1$S".
-PEPseudoSelTrailing=Fhuaraidh tocan air dheireadh as dèidh eileamaid fhuadain ach feumaidh e a bhith 'na phàirt dheireannach de roghnaichear: "%1$S".
+PEPseudoSelTrailing=Fhuaraidh tòcan air dheireadh as dèidh eileamaid fhuadain ach feumaidh e a bhith 'na phàirt dheireannach de roghnaichear: "%1$S".
 PEPseudoSelMultiplePE=Eileamaid fhuadain a bharrachd "%1$S".
 PEPseudoSelUnknown=Clas fuadain no eileamaid fhuadain neo-aithnichte: "%1$S".
 PENegationEOF=roghnaichear am broinn an àichidh
