--- a/toolkit/chrome/global/dateFormat.properties
+++ b/toolkit/chrome/global/dateFormat.properties
@@ -40,7 +40,7 @@ month.1.Mmm=Faoi
 month.2.Mmm=Gearr
 month.3.Mmm=Màrt
 month.4.Mmm=Gib
-month.5.Mmm=An Cèitean
+month.5.Mmm=Cèit
 month.6.Mmm=Ògmh
 month.7.Mmm=Iuch
 month.8.Mmm=Lùn
