--- a/toolkit/chrome/global/languageNames.properties
+++ b/toolkit/chrome/global/languageNames.properties
@@ -124,7 +124,7 @@ nr = Ndebele a Deas
 nso = Soto a Tuatha
 nv = Navajo
 ny = Chichewa
-oc = Osgatanais
+oc = Ogsatanais
 oj = Ojibwa
 om = Oromo
 or = Oriya
