--- a/browser/chrome/browser/migration/migration.properties
+++ b/browser/chrome/browser/migration/migration.properties
@@ -41,13 +41,13 @@ importedOperaSearchUrls=Lorgan le facal-luirg (o Opera)
 2_safari=Briosgaidean
 2_macie=Briosgaidean
 
-4_ie=An eachdraidh brabhsachaidh
-4_opera=An eachdraidh brabhsachaidh
-4_dogbert=An eachdraidh brabhsachaidh
-4_seamonkey=An eachdraidh brabhsachaidh
-4_phoenix=An eachdraidh brabhsachaidh
-4_safari=An eachdraidh brabhsachaidh
-4_macie=An eachdraidh brabhsachaidh
+4_ie=An eachdraidh brabhsaidh
+4_opera=An eachdraidh brabhsaidh
+4_dogbert=An eachdraidh brabhsaidh
+4_seamonkey=An eachdraidh brabhsaidh
+4_phoenix=An eachdraidh brabhsaidh
+4_safari=An eachdraidh brabhsaidh
+4_macie=An eachdraidh brabhsaidh
 
 8_ie=Air a shàbhaladh on eachdraidh
 8_opera=Air a shàbhaladh on eachdraidh
