--- a/dom/chrome/accessibility/unix/accessible.properties
+++ b/dom/chrome/accessibility/unix/accessible.properties
@@ -1,5 +1,5 @@
 jump    =       Thoir leum
-press   =       Brúigh
+press   =       Put
 check   =       Thoir sùil
 uncheck =       Dì-chomharraich
 select  =       Tagh
