--- a/security/manager/chrome/pipnss/nsserrors.properties
+++ b/security/manager/chrome/pipnss/nsserrors.properties
@@ -48,7 +48,7 @@ SSL_ERROR_RX_UNEXPECTED_CLIENT_KEY_EXCH=Fhuair SSL teachdaireachd crathadh-làim
 SSL_ERROR_RX_UNEXPECTED_FINISHED=Fhuair SSL teachdaireachd crathadh-làimhe Finished ris nach robh dùil.
 SSL_ERROR_RX_UNEXPECTED_CHANGE_CIPHER=Fhuair SSL clàr Change Ciper Spec ris nach robh dùil.
 SSL_ERROR_RX_UNEXPECTED_ALERT=Fhuair SSL clàr Alert ris nach robh dùil.
-SSL_ERROR_RX_UNEXPECTED_HANDSHAKE=Fhuair SSL clàr Handshake ris nach robh dùil.
+SSL_ERROR_RX_UNEXPECTED_HANDSHAKE=Fhuair SSL clàr crathaidh-làimhe ris nach robh dùil.
 SSL_ERROR_RX_UNEXPECTED_APPLICATION_DATA=Fhuair SSL clàr Application Data ris nach robh dùil.
 SSL_ERROR_RX_UNKNOWN_RECORD_TYPE=Fhuair SSL clàr anns a bha seòrsa neo-aithnichte de shusbaint.
 SSL_ERROR_RX_UNKNOWN_HANDSHAKE=Fhuair SSL teachdaireachd cràthaidh-làimhe anns a bha seòrsa neo-aithnichte de theachdaireachd.
@@ -63,8 +63,8 @@ SSL_ERROR_CERTIFICATE_UNKNOWN_ALERT=Bha duilgheadas neo-shònraichte aig an t-se
 SSL_ERROR_GENERATE_RANDOM_FAILURE=Dh'fhàillig an gineadair àireamhan tuaireamach aig SSL.
 SSL_ERROR_SIGN_HASHES_FAILURE=Cha do ghabh ainm digiteach a chur ris an dàta air a bheil feum gus an teisteanas agad a dhearbhadh.
 SSL_ERROR_EXTRACT_PUBLIC_KEY_FAILURE=Cha b' urrainn do SSL an iuchair phoblach a tharraing à teisteanas an t-seise.
-SSL_ERROR_SERVER_KEY_EXCHANGE_FAILURE=Fàillinn neo-shònraichte rè làimhseachadh crathadh-làimh SSL Server Key Exchange.
-SSL_ERROR_CLIENT_KEY_EXCHANGE_FAILURE=Fàillinn neo-shònraichte rè làimhseachadh crathadh-làimh SSL Client Key Exchange.
+SSL_ERROR_SERVER_KEY_EXCHANGE_FAILURE=Fàillinn neo-shònraichte rè làimhseachadh crathadh-làimhe SSL Server Key Exchange.
+SSL_ERROR_CLIENT_KEY_EXCHANGE_FAILURE=Fàillinn neo-shònraichte rè làimhseachadh crathadh-làimhe SSL Client Key Exchange.
 SSL_ERROR_ENCRYPTION_FAILURE=Dh'fhàillig algairim dubh-cheileadh tomad dàta anns an t-sreath-sifir a chaidh a thaghadh.
 SSL_ERROR_DECRYPTION_FAILURE=Dh'fhàillig algairim dì-cheileadh tomad dàta anns an t-sreath-sifir a chaidh a thaghadh.
 SSL_ERROR_SOCKET_WRITE_FAILURE=Dh'fhàillig sgrìobhadh an dàta air a dhubh-cheileadh gun bhun-shocaid.
