--- a/security/manager/chrome/pippki/pippki.properties
+++ b/security/manager/chrome/pippki/pippki.properties
@@ -133,7 +133,7 @@ pw_empty_warning=Cha bhi faclan-faire an lìn 's a' phuist-dhealain, dàta fhoir
 pw_change2empty_in_fips_mode=Tha thu ann am modh FIPS an-dràsta. Feumaidh FIPS prìomh fhacal-faire nach eil falamh.
 login_failed=Dh'fhàillig an logadh a-steach
 loadPK11TokenDialog=Tagh inneal PKCS#11 airson a luchdadh
-devinfo_modname=Modal
+devinfo_modname=Mòideal
 devinfo_modpath=Slighe
 devinfo_label=Leubail
 devinfo_manID=Saothraiche
