--- a/browser/installer/mui.properties
+++ b/browser/installer/mui.properties
@@ -61,7 +61,7 @@ MUI_INNERTEXT_COMPONENTS_DESCRIPTION_TITLE=Tuairisgeul
 MUI_INNERTEXT_COMPONENTS_DESCRIPTION_INFO=Gluais a' chuileag os cionn co-phàirt gus a tuairisgeul fhaicinn.
 MUI_TEXT_DIRECTORY_TITLE=Tagh àite an t-suidheachaidh
 MUI_TEXT_DIRECTORY_SUBTITLE=Tagh am pasgan far an dèid $BrandFullNameDA a stàladh.
-MUI_TEXT_INSTALLING_TITLE=A' stàladh
+MUI_TEXT_INSTALLING_TITLE='Ga stàladh
 MUI_TEXT_INSTALLING_SUBTITLE=Fuirich ort fhad 's a tha $BrandFullNameDA 'ga stàladh.
 MUI_TEXT_FINISH_TITLE=Stàladh deiseil
 MUI_TEXT_FINISH_SUBTITLE=Shoirbhich leis an stàladh.
