various terminoligy consistency fixes for gd

--- a/browser/chrome/browser/browser.properties
+++ b/browser/chrome/browser/browser.properties
@@ -63,16 +63,16 @@ undo=Neo-dhèan
 undo.accessKey=U
 
 # missing plugin installer
-missingpluginsMessage.title=Feumaidh tu pluginichean a bharrachd mus faic thu na meadhanan gu lèir air an duilleag seo.
-missingpluginsMessage.button.label=Suidhich na pluginichean a tha a dhìth…
+missingpluginsMessage.title=Feumaidh tu plugain a bharrachd mus faic thu na meadhanan gu lèir air an duilleag seo.
+missingpluginsMessage.button.label=Suidhich na plugain a tha a dhìth…
 missingpluginsMessage.button.accesskey=i
-outdatedpluginsMessage.title=Dh'fhalbh an ùine air cuid dhe na pluginichean a tha an duilleag seo a' cur gu feum.
-outdatedpluginsMessage.updateButton.label=Ùraich na pluginichean…
+outdatedpluginsMessage.title=Dh'fhalbh an ùine air cuid dhe na plugain a tha an duilleag seo a' cur gu feum.
+outdatedpluginsMessage.updateButton.label=Ùraich na plugain…
 outdatedpluginsMessage.updateButton.accesskey=u
-blockedpluginsMessage.title=Chaidh bacadh a chur air cuid dhe na pluginichean a dh'fheumas an duilleag seo a chum do dhìon.
+blockedpluginsMessage.title=Chaidh bacadh a chur air cuid dhe na plugain a dh'fheumas an duilleag seo a chum do dhìon.
 blockedpluginsMessage.infoButton.label=Mion-fhiosrachadh…
 blockedpluginsMessage.infoButton.accesskey=d
-blockedpluginsMessage.searchButton.label=Ùraich na pluginichean…
+blockedpluginsMessage.searchButton.label=Ùraich na plugain…
 blockedpluginsMessage.searchButton.accesskey=u
 crashedpluginsMessage.title=Thuislich am plugan %S.
 crashedpluginsMessage.reloadButton.label=Ath-luchdaich an duilleag
