--- a/browser/chrome/browser/pageInfo.properties
+++ b/browser/chrome/browser/pageInfo.properties
@@ -49,7 +49,7 @@ no=Chan eil
 
 mediaImg=Dealbh
 mediaBGImg=Cùlaibh
-mediaObject=Ball
+mediaObject=Nì
 mediaEmbed=Neadaich
 mediaLink=Ìomhaigheag
 mediaInput=Cuir a-steach
