--- a/netwerk/necko.properties
+++ b/netwerk/necko.properties
@@ -58,7 +58,7 @@ RepostFormData=Tha an duilleag-lìn seo ag ath-threòrachadh gu àite eile. A bh
 # Directory listing strings
 DirTitle=Clàr-amais %1$S
 DirGoUp=Suas gu pasgan aig ìre nas àirde
-ShowHidden=Seall na rudan falaichte
+ShowHidden=Seall na nithean falaichte
 DirColName=Ainm
 DirColSize=Meud
 DirColMTime=Atharrachadh mu dheireadh
