--- a/security/manager/chrome/pipnss/nsserrors.properties
+++ b/security/manager/chrome/pipnss/nsserrors.properties
@@ -174,8 +174,8 @@ SEC_ERROR_READ_ONLY=leabhar-lann tèarainteach: stòr-dàta ri leughadh a-mhàin
 SEC_ERROR_NO_SLOT_SELECTED=Cha deach sliotan no tòcan a thaghadh.
 SEC_ERROR_CERT_NICKNAME_COLLISION=Tha teisteanas air a bheil an dearbh fhar-ainm ann mu thràth.
 SEC_ERROR_KEY_NICKNAME_COLLISION=Tha iuchair air a bheil an dearbh fhar-ainm ann mu thràth.
-SEC_ERROR_SAFE_NOT_CREATED=mearachd rè cruthachadh a' bhuill shàbhailte
-SEC_ERROR_BAGGAGE_NOT_CREATED=mearachd rè cruthachadh a' bhuill-bhagaiste
+SEC_ERROR_SAFE_NOT_CREATED=mearachd rè cruthachadh an nì sàbhailte
+SEC_ERROR_BAGGAGE_NOT_CREATED=mearachd rè cruthachadh an nì bhagaiste
 XP_JAVA_REMOVE_PRINCIPAL_ERROR=Cha do ghabh am prìomhaire a thoirt air falbh.
 XP_JAVA_DELETE_PRIVILEGE_ERROR=Cha do ghabh a' phribhleid a sguabadh às.
 XP_JAVA_CERT_NOT_EXISTS_ERROR=Chan eil teisteanas aig a' phrìomhaire.
@@ -239,7 +239,7 @@ SEC_ERROR_OCSP_FUTURE_RESPONSE=Chan eil an fhreagairt OCSP dligheach fhathast (t
 SEC_ERROR_OCSP_OLD_RESPONSE=Tha fiosrachadh anns an fhreagairt OCSP a dh'fhalbh an ùine air.
 SEC_ERROR_DIGEST_NOT_FOUND=Cha deach an gearr-chunntas CMS no PKCS #7 a lorg san teachdaireachd shoidhnichte.
 SEC_ERROR_UNSUPPORTED_MESSAGE_TYPE=Chan eil taic ann ri seòrsa na teachdaireachd CMS no PKCS #7.
-SEC_ERROR_MODULE_STUCK=Cha do ghabh am mòideal PKCS #11 a sguabadh às a chionn 's gu bheilear 'ga chleachdadh fhathast.
+SEC_ERROR_MODULE_STUCK=Cha do ghabh am mòideal PKCS #11 a thoirt air falbh a chionn 's gu bheilear 'ga chleachdadh fhathast.
 SEC_ERROR_BAD_TEMPLATE=Cha do ghabh an dàta ASN.1 a dhì-chòdadh. Bha an teamplaid a chaidh a shònrachadh mì-dhligheach.
 SEC_ERROR_CRL_NOT_FOUND=Cha deach liosta nan teisteanasan a chaidh a chùl-ghairm a lorg.
 SEC_ERROR_REUSED_ISSUER_AND_SERIAL=Tha thu a' feuchainn ri teisteanas a thoirt a-steach aig a bheil an dearbh fhoillsichear/àireamh shreathach 's a tha aig teisteanas làithreach ach chan e an dearbh theisteanas a tha ann.
@@ -247,14 +247,14 @@ SEC_ERROR_BUSY=Cha do ghabh NSS a dhùnadh. Tha nithean 'gan cleachdadh fhathast
 SEC_ERROR_EXTRA_INPUT=Tha dàta a bharrachd 's gun chleachdadh anns an teachdaireachd a chaidh a chòdachadh a-rèir DER.
 SEC_ERROR_UNSUPPORTED_ELLIPTIC_CURVE=Lùb eileapsach gun taic ris.
 SEC_ERROR_UNSUPPORTED_EC_POINT_FORM=Lùb eileapsach ann am foirm puinge gun taic ris.
-SEC_ERROR_UNRECOGNIZED_OID=Aithniche adhbhair neo-aithnichte.
+SEC_ERROR_UNRECOGNIZED_OID=Aithniche nì neo-aithnichte.
 SEC_ERROR_OCSP_INVALID_SIGNING_CERT=Teisteanas soidhnidh OCSP neo-dhligheach san fhreagairt OCSP.
 SEC_ERROR_REVOKED_CERTIFICATE_CRL=Chaidh an teisteanas a chùl-ghairm ann an liosta nan teisteanasan a chaidh a chùl-ghairm aig an fhoillsichear.
 SEC_ERROR_REVOKED_CERTIFICATE_OCSP=Tha freagairiche OCSP an fhoillsicheir ag aithris gun deach an teisteanas a chùl-ghairm.
 SEC_ERROR_CRL_INVALID_VERSION=Tha àireamh tionndaidh neo-aithnichte air liosta nan teisteanasan a chaidh a chùl-ghairm aig an fhoillsicheir.
 SEC_ERROR_CRL_V1_CRITICAL_EXTENSION=Tha leasachan èiginneach air liosta nan teisteanasan a chaidh a chùl-ghairm V1 aig an fhoillsichear.
 SEC_ERROR_CRL_UNKNOWN_CRITICAL_EXTENSION=Tha leasachan èiginneach is neo-aithnichte air liosta nan teisteanasan a chaidh a chùl-ghairm V2 aig an fhoillsichear.
-SEC_ERROR_UNKNOWN_OBJECT_TYPE=Chaidh seòrsa neo-aithnichte a thaghadh airson rud.
+SEC_ERROR_UNKNOWN_OBJECT_TYPE=Chaidh seòrsa neo-aithnichte a thaghadh airson nì.
 SEC_ERROR_INCOMPATIBLE_PKCS11=Tha an draibhear PKCS #11 a' milleadh an t-sònrachais air dòigh neo-chòrdail.
 SEC_ERROR_NO_EVENT=Chan eil tachartas sliotain ùr ri fhaighinn an-dràsta.
 SEC_ERROR_CRL_ALREADY_EXISTS=Tha liosta de theisteanasan a chaidh a chùl-ghairm ann mu thràth.
