--- a/toolkit/chrome/passwordmgr/passwordmgr.properties
+++ b/toolkit/chrome/passwordmgr/passwordmgr.properties
@@ -66,7 +66,7 @@ hidePasswordsAccessKey=P
 showPasswords=Seall na faclan-faire
 showPasswordsAccessKey=P
 noMasterPasswordPrompt=A bheil thu cinnteach gu bheil thu airson na faclan-faire agad a shealltainn?
-removeAllPasswordsPrompt=A bheil thu airson gach facal-faire a sguabadh às?
-removeAllPasswordsTitle=Sguab às a h-uile facal-faire
+removeAllPasswordsPrompt=A bheil thu airson gach facal-faire a thoirt air falbh?
+removeAllPasswordsTitle=Thoir air falbh a h-uile facal-faire
 loginsSpielAll=Tha faclan-faire air a stòradh air a' choimpiutair agad airson nan làraichean a leanas:
 loginsSpielFiltered=Tha na faclan-faire a leanas a' freagairt ris an lorg agad:
