--- a/browser/chrome/browser/places/places.properties
+++ b/browser/chrome/browser/places/places.properties
@@ -86,7 +86,7 @@ tabs.openWarningMultipleBranded=Tha thu gu bhith a' fosgladh %S tabaichean. Dh'f
 tabs.openButtonMultiple=Fosgail na tabaichean
 tabs.openWarningPromptMeBranded=Thoir rabhadh dhomh ma tha mi gu bhith a' fosgladh iomadh taba a dh'fhaodadh maille a chur air %S.
 
-status_foldercount = %S rud(an)
+status_foldercount = %S nì/nithean
 
 SelectImport=Ion-phortaich faidhle nan comharra-lìn
 EnterExport=Às-phortaich faidhle nan comharra-lìn
