--- a/dom/chrome/layout/MediaDocument.properties
+++ b/dom/chrome/layout/MediaDocument.properties
@@ -47,8 +47,8 @@ ImageTitleWithDimensionsAndFile=%S (Dealbh %S, %Sx%S pixel)
 ImageTitleWithoutDimensions=%S (Dealbh %S)
 ImageTitleWithDimensions=(Dealbh %S, %Sx%S pixel)
 ImageTitleWithNeitherDimensionsNorFile=(Dealbh %S)
-MediaTitleWithFile=%S (Cuspair %S)
-MediaTitleWithNoInfo=(Cuspair %S)
+MediaTitleWithFile=%S (Nì %S)
+MediaTitleWithNoInfo=(Nì %S)
 
 InvalidImage=Cha ghabh an dealbh "%S" a shealltainn a chionn 's gu bheil mearachdan ann.
 ScaledImage=Air a sgèileadh (%S%%)
