--- a/security/manager/chrome/pipnss/pipnss.properties
+++ b/security/manager/chrome/pipnss/pipnss.properties
@@ -81,8 +81,8 @@ VerifySSLStepUp=Frithealaiche SSL le Step-Up
 VerifySSLCA=Ùghdarras teisteanachaidh SSL
 VerifyEmailSigner=Teisteanas soidhniche puist-dhealain
 VerifyEmailRecip=Teisteanas faightear puist-dhealain
-VerifyProtectObjSign=Soidhniche nan rudan dìonta
-VerifyObjSign=Soidhniche nan rudan
+VerifyProtectObjSign=Soidhniche nan nithean dìonta
+VerifyObjSign=Soidhniche nan nithean
 VerifyUserImport=Teisteanas ion-phortadh cleachdaiche
 VerifyCAVerifier=Dearbhadair an ùghdarrais teisteanachaidh
 VerifyStatusResponder=Teisteanas an fhreagaraiche inbhe
@@ -98,14 +98,14 @@ CertDumpVersion1=Tionndadh 1
 CertDumpVersion2=Tionndadh 2
 CertDumpVersion3=Tionndadh 3
 CertDumpSerialNo=Àireamh shreathach
-CertDumpOID=Aithniche rudan
+CertDumpOID=Aithniche nithean
 CertDumpMD2WithRSA=MD2 a-rèir PKCS #1 le dubh-cheileadh RSA
 CertDumpMD5WithRSA=MD5 a-rèir PKCS #1 le dubh-cheileadh RSA
 CertDumpSHA1WithRSA=SHA-1 a-rèir PKCS #1 le dubh-cheileadh RSA
 CertDumpSHA256WithRSA=SHA-256 a-rèir PKCS #1 le dubh-cheileadh RSA
 CertDumpSHA384WithRSA=SHA-384 a-rèir PKCS #1 le dubh-cheileadh RSA
 CertDumpSHA512WithRSA=SHA-512 a-rèir PKCS #1 le dubh-cheileadh RSA
-CertDumpDefOID=Aithniche rudan (%S)
+CertDumpDefOID=Aithniche nithean (%S)
 CertDumpNULL=NULL
 CertDumpIssuer=Foillsichear
 CertDumpSubject=Cuspair
@@ -298,8 +298,8 @@ VerifySSLStepUp_p=Step-Up
 VerifySSLCA_p=Ùghdarras teisteanachaidh SSL
 VerifyEmailSigner_p=Cuir ainm ris
 VerifyEmailRecip_p=Dubh-cheil
-VerifyProtectObjSign_p=Soidhniche nan rudan dìonta
-VerifyObjSign_p=Soidhniche nan rudan
+VerifyProtectObjSign_p=Soidhniche nan nithean dìonta
+VerifyObjSign_p=Soidhniche nan nithean
 VerifyUserImport_p=Ion-phortadh cleachdaiche
 VerifyCAVerifier_p=Dearbhadair an ùghdarrais teisteanachaidh
 VerifyStatusResponder_p=Freagaraiche inbhe
