--- a/toolkit/chrome/global/xpinstall/xpinstall.properties
+++ b/toolkit/chrome/global/xpinstall/xpinstall.properties
@@ -59,7 +59,7 @@ ExecuteFileWithArgs=Gnìomhaich am faidhle: %s leis an argamaid: %s
 MoveFile=Gluais am faidhle: %s gu %s
 RenameFile=Cuir ainm eile air an fhaidhle: %s gu %s
 CreateFolder=Cruthaich pasgan: %s
-RemoveFolder=Sguab às am pasgan: %s
+RemoveFolder=Thoir air falbh am pasgan: %s
 RenameFolder=Cuir ainm eile air a' phasgan: %s gu %s
 WindowsShortcut=Ath-ghoirid Windows: %s
 MacAlias=Ainm-brèige Mhic an Tòisich: %s
@@ -90,7 +90,7 @@ OK=Stàlaich
 progress.queued=Sa chiutha
 progress.downloading=A' luchdadh a-nuas…
 progress.downloaded=Air a luchdadh a-nuas
-progress.installing=A' stàladh…
+progress.installing='Ga stàladh…
 
 Unsigned=Gun ainm ris
 
