various consistency fixes to gd

--- a/browser/chrome/overrides/appstrings.properties
+++ b/browser/chrome/overrides/appstrings.properties
@@ -50,8 +50,8 @@ netReset=Chaidh an ceangal ris an fhrithealaiche ath-shuidheachadh fhad 's a bha
 netOffline=Tha Firefox sa mhodh far loidhne an-dràsta is chan urrainn dhut an lìon a bhrabhsadh.
 isprinting=Chan ghabh sgrìobhainn atharrachadh fhad 's a thathar 'ga chlò-bhualadh no fhad 's a thathar 'ga ro-shealladh.
 deniedPortAccess=Tha an seòladh seo a' cleachdadh port lìonra a chleachdar a chum rudan eile a ghnàth seach brabhsadh-lìn. Sguir Firefox dhen iarrtas gus do dhìon.
-proxyResolveFailure=Tha Firefox air a cho-dhealbhadh gus frithealaiche progsaidh a lorg nach gabh a lorg.
-proxyConnectFailure=Tha Firefox air a cho-dhealbhadh gus frithealaiche progsaidh a chleachdadh a tha a' diùltadh cheanglaichean.
+proxyResolveFailure=Tha Firefox air a rèiteachadh gus frithealaiche progsaidh a lorg nach gabh a lorg.
+proxyConnectFailure=Tha Firefox air a rèiteachadh gus frithealaiche progsaidh a chleachdadh a tha a' diùltadh cheanglaichean.
 contentEncodingError=Chan fhaic thu an duilleag sin a chionn 's gu bheil e a' cleachdadh seòrsa de dhlùth-theannadh a tha mì-dhligheach no nach eil taic ann dha.
 unsafeContentType=Chan fhaic thu an duilleag sin a chionn 's gum faod a leithid de dh'fhaidhle a bhith cunnartach ma dh'fhosglas tu e. Nach leig thu fios air an duilgheadas seo gun fheadhainn aig a bheil an làrach-lìn?
 externalProtocolTitle=Iarrtas air pròtacal on taobh a-muigh
