--- a/browser/installer/mui.properties
+++ b/browser/installer/mui.properties
@@ -72,7 +72,7 @@ MUI_TEXT_FINISH_INFO_TITLE=Tha draoidh an t-suidheachaidh aig $BrandFullNameDA a
 MUI_TEXT_FINISH_INFO_TEXT=Chaidh $BrandFullNameDA a stàladh air a' choimpiutair agad.\n\nBriog air "Cuir crìoch air" gus an draoidh seo a dhùnadh.
 MUI_TEXT_FINISH_INFO_REBOOT=Feumaidh tu an coimpiutair agad tòiseachadh a-rithist gus crìoch a chur air stàladh $BrandFullNameDA. A bheil thu airson ath-thòiseachadh an-dràsta?
 MUI_TEXT_FINISH_REBOOTNOW=Tòisich e a-rithist an-dràsta
-MUI_TEXT_FINISH_REBOOTLATER=B' fhearr leam ath-thòiseachadh de làimh às a dhèidh seo
+MUI_TEXT_FINISH_REBOOTLATER=B' fhearr leam ath-thòiseachadh a làimh uaireigin eile
 MUI_TEXT_STARTMENU_TITLE=Tagh pasgan san "Start Menu"
 MUI_TEXT_STARTMENU_SUBTITLE=Tagh pasgan san Start Menu airson na h-ath-ghoiridean aig $BrandFullNameDA.
 MUI_INNERTEXT_STARTMENU_TOP=Tagh am pasgan san Start Menu far am bu toigh leat ath-ghoiridean a' phrògraim a chruthachadh. Ma chuireas tu ainm ann, 's urrainn dhut pasgan ùr a chruthachadh.
