--- a/dom/chrome/accessibility/mac/accessible.properties
+++ b/dom/chrome/accessibility/mac/accessible.properties
@@ -7,7 +7,7 @@ open    =       Fosgail
 close   =       Dùin
 switch  =       Dèan suaip
 click   =       Briog
-collapse=       Dùmhlaich
+collapse=       Co-theannaich
 expand  =       Leudaich
 activate=       Cuir beò
 cycle   =       Cuairt
