--- a/toolkit/chrome/autoconfig/autoconfig.properties
+++ b/toolkit/chrome/autoconfig/autoconfig.properties
@@ -1,7 +1,7 @@
-readConfigTitle = Mearachd co-dhealbhachd
-readConfigMsg = Dh'fhàillig leughadh an fhaidhle cho-dhealbhachd. Leig fios gu rianaire an t-siostaim agad.
+readConfigTitle = Mearachd rèiteachaidh
+readConfigMsg = Dh'fhàillig leughadh an fhaidhle rèiteachaidh. Leig fios gu rianaire an t-siostaim agad.
 
-autoConfigTitle = Rabhadh AutoConfig
+autoConfigTitle = Caismeachd AutoConfig
 autoConfigMsg = Dh'fhàillig Netscape.cfg/AutoConfig. Leig fios gu rianaire an t-siostaim agad. \n Mearachd: Dh'fhàillig %S:
 
 emailPromptTitle = Seòladh puist-dhealain
