--- a/toolkit/chrome/mozapps/downloads/unknownContentType.properties
+++ b/toolkit/chrome/mozapps/downloads/unknownContentType.properties
@@ -43,7 +43,7 @@ defaultApp=%S (bunaiteach)
 chooseAppFilePickerTitle=Tagh am prògram cobharach
 badApp=Cha deach am prògram a shònraich thu ("%S") a lorg. Cuir sùil air ainm an fhaidhle no sònraich prògram eile.
 badApp.title=Cha deach am prògram a lorg
-badPermissions=Cha do ghabh am faidhle a shàbhaladh a chionn 's nach eil cead iomchaidh agad. Tagh pasgan sàbhalaidh eile.
+badPermissions=Cha do ghabh am faidhle a shàbhaladh a chionn 's nach eil cead iomchaidh agad. Tagh eòlaire sàbhalaidh eile.
 badPermissions.title=Cead sàbhalaidh mì-dhligheach
 selectDownloadDir=Sònraich pasgan luchdachaidh a-nuas
 unknownAccept.label=Sàbhail am faidhle
