--- a/toolkit/chrome/mozapps/update/updates.properties
+++ b/toolkit/chrome/mozapps/update/updates.properties
@@ -31,7 +31,7 @@ updaterIOErrorTitle=Dh'fhàillig ùrachadh a' bhathar-bhuig
 updaterIOErrorMsg=Cha do ghabh an t-ùrachadh a stàladh. Dèan cinnteach nach eil lethbhreac eile de %S a' dol air a' choimpiutair agad is ath-thòisich %S an uairsin is feuch ris a-rithist.
 okButton=Ceart ma-tha
 okButton.accesskey=C
-askLaterButton=Faighnich dhìom às a dhèidh seo
+askLaterButton=Faighnich dhìom an ceann tàmaill
 askLaterButton.accesskey=a
 noThanksButton=Na ùraich, mòran taing
 noThanksButton.accesskey=N
@@ -43,8 +43,8 @@ backButton=Air ais
 backButton.accesskey=A
 acceptTermsButton=Tha mi a' gabhail ris na teirmichean
 acceptTermsButton.accesskey=a
-restartLaterButton=Ath-thòisich às a dhèidh seo
-restartLaterButton.accesskey=h
+restartLaterButton=Ath-thòisich uaireigin eile
+restartLaterButton.accesskey=l
 restartNowButton=Ath-thòisich %S
 restartNowButton.accesskey=A
 
@@ -99,5 +99,5 @@ check_error-2152398890=Cha deach am frithealaiche progsaidh a lorg (cuir sùil a
 check_error-2152398918=Tha an lìonra far loidhe (rach air loidhne)
 check_error-2152398919=Bhris tar-aiseag an dàta (cuir sùil air a' cheangal agad ris an lìon)
 check_error-2152398920=Chaidh ceangal ris an fhrithealaiche phrogsaidh a dhiùltadh
-check_error-2153390069=Dh'fhalbh an ùine air ceadachas an fhrithealaiche (cuir ceart ceann-latha is uair an t-siostaim agad ma tha e cearr)
+check_error-2153390069=Dh'fhalbh an ùine air ceadachas an fhrithealaiche (cuir ceart ceann-là is uair an t-siostaim agad ma tha e cearr)
 check_error-verification_failed=Cha do ghabh iomlanachd an ùrachaidh a dhearbhadh
