--- a/toolkit/crashreporter/crashreporter.ini
+++ b/toolkit/crashreporter/crashreporter.ini
@@ -50,7 +50,7 @@ ErrorDumpFileMove=Cha do ghabh dumpa an tuislidh a ghluasad.
 ErrorNoProductName=Cha dug am prògram seachad a dhearbh aithne.
 ErrorNoServerURL=Cha do shònraich am prògram frithealaiche airson aithisgean tuislidh.
 ErrorNoSettingsPath=Cha do ghabh roghainnean aithrisiche nan tuislidhean a lorg.
-ErrorCreateDumpDir=Cha do ghabh pasgan nan dumpadh ri dhèanamh a chruthachadh.
+ErrorCreateDumpDir=Cha do ghabh eòlaire nan dumpadh ri dhèanamh a chruthachadh.
 # LOCALIZATION NOTE (ErrorEndOfLife): The %s is replaced with the product name.
 ErrorEndOfLife=Chan eil taic ann tuilleadh dhan tionndadh seo de %S. Chan eilear a' gabhail ri aithisgean nan tuislidhean air sgàth sin. Saoil an ùraich thu e gu tionndadh a tha taic ann riutha?
 
