--- a/browser/chrome/browser/pageInfo.properties
+++ b/browser/chrome/browser/pageInfo.properties
@@ -43,7 +43,7 @@ pageInfo.frame.title=Fiosrachadh an fhrèama - %S
 noPageTitle=Duilleag gun tiotal:
 pageTitle=%S:
 unknown=Neo-aithnichte
-notset=Gun roghnadh
+notset=Gun sònrachadh
 yes=Tha
 no=Chan eil
 
