--- a/dom/chrome/appstrings.properties
+++ b/dom/chrome/appstrings.properties
@@ -49,8 +49,8 @@ netReset=Chan eil dàta sa sgrìobhainn seo.
 netOffline=Chan fhaic thu an sgrìobhainn seo fhad 's a bhios tu far loidhne. Dì-chomharraich "Obair far loidhne" sa chlàr-taice Faidhle gus dol air loidhne.
 isprinting=Chan ghabh sgrìobhainn atharrachadh fhad 's a thathar 'ga chlò-bhualadh no fhad 's a thathar 'ga ro-shealladh.
 deniedPortAccess=Chaidh casg a chur air inntrigeadh gun a' phort a thagh thu air sgàth adhbharan tèarainteachd.
-proxyResolveFailure=Cha deach am frithealaiche progsaidh a thagh thu a lorg. Cuir sùil air na roghainnean progsaidh agad is feuch ris a-rithist.
-proxyConnectFailure=Chaidh an ceangal a dhiùltadh nuair a dh'iarradh ceangal ris an fhrithealaiche phrogsaidh a thagh thu. Cuir sùil air na roghainnean progsaidh agad is feuch ris a-rithist.
+proxyResolveFailure=Cha deach am frithealaiche progsaidh a rèitich thu a lorg. Cuir sùil air na roghainnean progsaidh agad is feuch ris a-rithist.
+proxyConnectFailure=Chaidh an ceangal a dhiùltadh nuair a dh'iarradh ceangal ris an fhrithealaiche phrogsaidh a rèitich thu. Cuir sùil air na roghainnean progsaidh agad is feuch ris a-rithist.
 contentEncodingError=Chan fhaic thu an duilleag sin a chionn 's gu bheil e a' cleachdadh seòrsa de dhlùth-theannadh a tha mì-dhligheach no nach eil taic ann dha.
 unsafeContentType=Chan fhaic thu an duilleag sin a chionn 's gum faod a leithid de dh'fhaidhle a bhith cunnartach ma dh'fhosglas tu e. Nach leig thu fios air an duilgheadas seo gun fheadhainn aig a bheil an làrach-lìn?
 externalProtocolTitle=Iarrtas air pròtacal on taobh a-muigh
