--- a/dom/chrome/layout/printing.properties
+++ b/dom/chrome/layout/printing.properties
@@ -87,7 +87,7 @@ NS_ERROR_GFX_PRINTER_PAPER_SIZE_NOT_SUPPORTED=Bha mearachd ann leis a' chlò-bhu
 NS_ERROR_GFX_PRINTER_ORIENTATION_NOT_SUPPORTED=Bha mearachd ann leis a' chlò-bhualadh a chionn 's nach eil an clò-bhualadair agad a' toirt taic ri taobhachadh na duilleige a shònraich thu.
 NS_ERROR_GFX_PRINTER_COLORSPACE_NOT_SUPPORTED=Bha mearachd ann leis a' chlò-bhualadh a chionn 's gu bheil an obair clò-bhualaidh feumach air feartan dathachaidh nach eil an clò-bhualadair agad comasach air.
 NS_ERROR_GFX_PRINTER_TOO_MANY_COPIES=Bha mearachd ann leis a' chlò-bhualadh a chionn 's gun do dh'iarr thu cus lethbhreac.
-NS_ERROR_GFX_PRINTER_DRIVER_CONFIGURATION_ERROR=Bha mearachd ann leis a' chlò-bhualadh. Chan eil an draibhear clò-bhualaidh air a cho-dhealbhadh mar bu chòir.
+NS_ERROR_GFX_PRINTER_DRIVER_CONFIGURATION_ERROR=Bha mearachd ann leis a' chlò-bhualadh. Chan eil an draibhear clò-bhualaidh air a rèiteachadh mar bu chòir.
 NS_ERROR_GFX_PRINTER_DOC_IS_BUSY_PP=Chan urrainn dhan bhrabhsair ro-shealladh clò-bhualaidh a dhèanamh an-dràsta.\nFeuch ris a-rithist nuair a bhios an duilleag air luchdadh.
 NS_ERROR_GFX_PRINTER_DOC_WAS_DESTORYED=Chaidh rud ùr an àite na duilleige 's tu feuchainn ri clò-bhualadh.\nFeuch ris a-rithist.
 NS_ERROR_GFX_NO_PRINTDIALOG_IN_TOOLKIT=Chan eil conaltradh so-phlugaichte air an stàladh mar bu chòir\nno chan eil an GFX Toolkit seo a' toirt taic ri conaltradh clò-bhualaidh dùthchasach tuilleadh.
