--- a/dom/chrome/nsWebBrowserPersist.properties
+++ b/dom/chrome/nsWebBrowserPersist.properties
@@ -35,7 +35,7 @@
 #
 # ***** END LICENSE BLOCK *****
 
-readError=Cha do ghabh %S a shàbhaladh a chionn 's nach do ghabh am faidhle tùsail a leughadh.\n\nFeuch ris a-rithist às a dhèidh seo no leig fios gu rianaire an fhrithealaiche.
+readError=Cha do ghabh %S a shàbhaladh a chionn 's nach do ghabh am faidhle tùsail a leughadh.\n\nFeuch ris a-rithist an ceann tàmaill no leig fios gu rianaire an fhrithealaiche.
 writeError=Cha do ghabh %S a shàbhaladh a chionn 's gun do thachair mearachd neo-aithnichte.\n\nFeuch ri a shàbhaladh am badeigin eile.
 launchError=Cha do ghabh %S fhosgladh a chionn 's gun do thachair mearachd neo-aithnichte.\n\nFeuch ri a shàbhaladh air an diosg an toiseach 's fhoasgladh an uairsin.
 diskFull=Chan eil àite gu leòr air an diosg gus %S a shàbhaladh.\n\nThoir air falbh faidhlichean air nach eil feum tuilleadh agus feuch ris a-rithist no feuch ri a shàbhaladh am badeigin eile.
@@ -44,5 +44,5 @@ accessError=Cha do ghabh %S a shàbhaladh a chionn 's nach urrainn dhut susbaint
 helperAppNotFound=Cha do ghabh %S fhosgladh a chionn 's nach eil am prògram taice co-cheangailte ris ann. Atharraich an dàimh anns na roghainnean agad.
 noMemory=Chan eil cuimhne gu leòr ann gus an gnìomh a dh'iarr thu a choileanadh.\n\nDùin prògram no dhà agus feuch ris a-rithist.
 title=A' luchdadh a-nuas %S
-fileAlreadyExistsError=Cha do ghabh %S a shàbhaladh a chionn 's gu bheil faidhle ann mu thràth leis an aon ainm a tha air a' phasgan "_faidhle".\n\nFeuch ri a shàbhaladh am badeigin eile.
+fileAlreadyExistsError=Cha do ghabh %S a shàbhaladh a chionn 's gu bheil faidhle ann mu thràth leis an dearbh ainm a tha air an eòlaire "_faidhle".\n\nFeuch ri a shàbhaladh am badeigin eile.
 fileNameTooLongError=Cha do ghabh %S a shàbhaladh a chionn 's gun robh ainm na faidhle ro fhada.\n\nFeuch ri a shàbhaladh le ainm nas giorra.
