--- a/extensions/reporter/chrome/reportWizard.properties
+++ b/extensions/reporter/chrome/reportWizard.properties
@@ -9,4 +9,4 @@ finishError=Mearachd rè cur a' chunntais agad
 successfullyCreatedReport=Chaidh an cunntas a chur gu soirbheachail
 failedCreatingReport=Thachair mearachd rè cruthachadh a' chunntais agus cha deach fiosrachadh a chur gu mozilla.org mar sin
 defaultError=Cha do ghabh ceangal a dhèanamh ris an fhrithealaiche.
-invalidResponse=Fhuaradh freagairt mì-dhligheach on fhrithealaiche. Feuch ris a-rithist às a dhèidh seo.
+invalidResponse=Fhuaradh freagairt mì-dhligheach on fhrithealaiche. Feuch ris a-rithist an ceann tàmaill.
