--- a/netwerk/necko.properties
+++ b/netwerk/necko.properties
@@ -57,7 +57,7 @@ RepostFormData=Tha an duilleag-lìn seo ag ath-threòrachadh gu àite eile. A bh
 
 # Directory listing strings
 DirTitle=Clàr-amais %1$S
-DirGoUp=Suas gu pasgan aig ìre nas àirde
+DirGoUp=Suas gu eòlaire aig ìre nas àirde
 ShowHidden=Seall na nithean falaichte
 DirColName=Ainm
 DirColSize=Meud
