--- a/security/manager/chrome/pipnss/nsserrors.properties
+++ b/security/manager/chrome/pipnss/nsserrors.properties
@@ -33,7 +33,7 @@ SSL_ERROR_RX_MALFORMED_CERT_VERIFY=Fhuair SSL teachdaireachd crathadh-làimhe Ce
 SSL_ERROR_RX_MALFORMED_CLIENT_KEY_EXCH=Fhuair SSL teachdaireachd crathadh-làimhe Client Key Exchange mhì-chumte.
 SSL_ERROR_RX_MALFORMED_FINISHED=Fhuair SSL teachdaireachd crathadh-làimhe Finished mhì-chumte.
 SSL_ERROR_RX_MALFORMED_CHANGE_CIPHER=Fhuair SSL clàr Change Cipher Spec mì-chumte.
-SSL_ERROR_RX_MALFORMED_ALERT=Fhuair SSL clàr Alert mì-chumte.
+SSL_ERROR_RX_MALFORMED_ALERT=Fhuair SSL clàr caismeachd mì-chumte.
 SSL_ERROR_RX_MALFORMED_HANDSHAKE=Fhuair SSL clàr Handshake mì-chumte.
 SSL_ERROR_RX_MALFORMED_APPLICATION_DATA=Fhuair SSL clàr Application Data mì-chumte.
 SSL_ERROR_RX_UNEXPECTED_HELLO_REQUEST=Fhuair SSL teachdaireachd crathadh-làimhe Hello Request ris nach robh dùil.
@@ -47,12 +47,12 @@ SSL_ERROR_RX_UNEXPECTED_CERT_VERIFY=Fhuair SSL teachdaireachd crathadh-làimhe C
 SSL_ERROR_RX_UNEXPECTED_CLIENT_KEY_EXCH=Fhuair SSL teachdaireachd crathadh-làimhe Client Key Exchange ris nach robh dùil.
 SSL_ERROR_RX_UNEXPECTED_FINISHED=Fhuair SSL teachdaireachd crathadh-làimhe Finished ris nach robh dùil.
 SSL_ERROR_RX_UNEXPECTED_CHANGE_CIPHER=Fhuair SSL clàr Change Ciper Spec ris nach robh dùil.
-SSL_ERROR_RX_UNEXPECTED_ALERT=Fhuair SSL clàr Alert ris nach robh dùil.
+SSL_ERROR_RX_UNEXPECTED_ALERT=Fhuair SSL clàr caismeachd ris nach robh dùil.
 SSL_ERROR_RX_UNEXPECTED_HANDSHAKE=Fhuair SSL clàr crathaidh-làimhe ris nach robh dùil.
 SSL_ERROR_RX_UNEXPECTED_APPLICATION_DATA=Fhuair SSL clàr Application Data ris nach robh dùil.
 SSL_ERROR_RX_UNKNOWN_RECORD_TYPE=Fhuair SSL clàr anns a bha seòrsa neo-aithnichte de shusbaint.
 SSL_ERROR_RX_UNKNOWN_HANDSHAKE=Fhuair SSL teachdaireachd cràthaidh-làimhe anns a bha seòrsa neo-aithnichte de theachdaireachd.
-SSL_ERROR_RX_UNKNOWN_ALERT=Fhuair SSL clàr rabhaidh anns a bha tuairisgeul rabhaidh neo-aithnichte.
+SSL_ERROR_RX_UNKNOWN_ALERT=Fhuair SSL clàr caismeachd sa bha tuairisgeul caismeachd neo-aithnichte.
 SSL_ERROR_CLOSE_NOTIFY_ALERT=Dhùin an seise SSL an ceangal seo.
 SSL_ERROR_HANDSHAKE_UNEXPECTED_ALERT=Cha robh dùil aig an t-seise SSL ris an teachdaireachd crathaidh-làimhe a fhuair e.
 SSL_ERROR_DECOMPRESSION_FAILURE_ALERT=Cha b' urrainn do sheise SSL clàr SSL a fhuair e a dhì-bhrùthadh gu soirbheachail.
@@ -134,8 +134,8 @@ SEC_ERROR_NO_KEY=Cha ghabh an iuchair phrìobhaideach airson an teisteanais seo 
 SEC_ERROR_CERT_VALID=Tha an teisteanas seo dligheach.
 SEC_ERROR_CERT_NOT_VALID=Chan eil an teisteanas seo dligheach.
 SEC_ERROR_CERT_NO_RESPONSE=Leabhar-lann teisteanais: Gun fhreagairt
-SEC_ERROR_EXPIRED_ISSUER_CERTIFICATE=Dh'fhalbh an ùine air an teisteanas aig foillsichear an teisteanais. Cuir sùil air ceann-latha is àm an t-siostaim agad.
-SEC_ERROR_CRL_EXPIRED=Dh'fhalbh an ùine air an CRL aig foillsichear an teisteanais seo. Ùraich e no cuir sùil air ceann-latha is àm an t-siostaim agad.
+SEC_ERROR_EXPIRED_ISSUER_CERTIFICATE=Dh'fhalbh an ùine air an teisteanas aig foillsichear an teisteanais. Cuir sùil air ceann-là is àm an t-siostaim agad.
+SEC_ERROR_CRL_EXPIRED=Dh'fhalbh an ùine air an CRL aig foillsichear an teisteanais seo. Ùraich e no cuir sùil air ceann-là is àm an t-siostaim agad.
 SEC_ERROR_CRL_BAD_SIGNATURE=Tha ainm mì-dhligheach aig CRL foillsichear an teisteanais.
 SEC_ERROR_CRL_INVALID=Tha fòrmat mì-dhligheach aig an CRL ùr.
 SEC_ERROR_EXTENSION_VALUE_INVALID=Tha luach leasachan an teisteanais mì-dhligheach.
@@ -226,7 +226,7 @@ SEC_ERROR_OCSP_UNKNOWN_RESPONSE_TYPE=Cha ghabh an fhreagairt OCSP a dhì-chòdad
 SEC_ERROR_OCSP_BAD_HTTP_RESPONSE=Thill am frithealaiche OCSP dàta HTTP ris nach robh dùil no a tha mì-dhligheach.
 SEC_ERROR_OCSP_MALFORMED_REQUEST=Mheas am frithealaiche OCSP gu bheil an t-iarrtas air a thruailleadh no air a dhroch chumadh.
 SEC_ERROR_OCSP_SERVER_ERROR=Thachair mearachd taobh a-staigh an fhrithealaiche OCSP.
-SEC_ERROR_OCSP_TRY_SERVER_LATER=Tha am frithealaiche OCSP a' moladh dhut feuchainn ris às a dhèidh seo.
+SEC_ERROR_OCSP_TRY_SERVER_LATER=Tha am frithealaiche OCSP a' moladh dhut feuchainn ris a-rithist an ceann tàmaill.
 SEC_ERROR_OCSP_REQUEST_NEEDS_SIG=Feumaidh am frithealaiche OCSP ainm ris an iarrtas seo.
 SEC_ERROR_OCSP_UNAUTHORIZED_REQUEST=Dhiùlt am frithealaiche OCSP an t-iarrtas seo a chionn 's nach eil ùghdarras aige.
 SEC_ERROR_OCSP_UNKNOWN_RESPONSE_STATUS=Thill am frithealaiche OCSP inbhe nach gabh aithneachadh.
@@ -235,7 +235,7 @@ SEC_ERROR_OCSP_NOT_ENABLED=Feumaidh tu OCSP a chur an comas mus dèan thu seo.
 SEC_ERROR_OCSP_NO_DEFAULT_RESPONDER=Feumaidh tu freagairiche OCSP bunaiteach a shuidheachadh mus dèan thu seo.
 SEC_ERROR_OCSP_MALFORMED_RESPONSE=Chaidh freagairt an fhrithealaiche OCSP a thruailleadh no a dhroch cumadh.
 SEC_ERROR_OCSP_UNAUTHORIZED_RESPONSE=Chan eil ùghdarras aig soidhniche na freagairt OCSP inbhe a thoirt seachad airson an teisteanais seo.
-SEC_ERROR_OCSP_FUTURE_RESPONSE=Chan eil an fhreagairt OCSP dligheach fhathast (tha ceann-latha san àm ri teachd ann).
+SEC_ERROR_OCSP_FUTURE_RESPONSE=Chan eil an fhreagairt OCSP dligheach fhathast (tha ceann-là san àm ri teachd ann).
 SEC_ERROR_OCSP_OLD_RESPONSE=Tha fiosrachadh anns an fhreagairt OCSP a dh'fhalbh an ùine air.
 SEC_ERROR_DIGEST_NOT_FOUND=Cha deach an gearr-chunntas CMS no PKCS #7 a lorg san teachdaireachd shoidhnichte.
 SEC_ERROR_UNSUPPORTED_MESSAGE_TYPE=Chan eil taic ann ri seòrsa na teachdaireachd CMS no PKCS #7.
