--- a/security/manager/chrome/pipnss/security.properties
+++ b/security/manager/chrome/pipnss/security.properties
@@ -43,11 +43,11 @@ EnterSecureMessage=Dh'iarr thu duilleag dhubh-cheilte. Chuir an làrach-lìn e f
 WeakSecureMessage=Dh'iarr thu duilleag a' tha a' cleachdadh dubh-cheileadh de dh'ìre ìseal. Chuir an làrach-lìn e fhèin an aithne mar bu chòir ach b' urrainn do threas pàrtaidh am fiosrachadh a chì thu no a chuireas tu a-steach air an duilleag seo a leughadh. 
 PostToInsecureFromSecureMessage=Ged a tha an duilleag seo air a dhubh-cheileadh, thèid am fiosrachadh a chuir thu a-steach a chur a-null air ceangal gun dubh-cheileadh agus b' urrainn do threas pàrtaidh a leughadh furasta gu leòr.##A bheil thu cinnteach gu bheil thu ag iarraidh am fiosrachadh seo a chur a-null?##
 PostToInsecureFromInsecureMessage=Thèid am fiosrachadh a chuir thu a-steach a chur a-null air ceangal gun dubh-cheileadh agus b' urrainn do threas pàrtaidh a leughadh furasta gu leòr.##A bheil thu cinnteach gu bheil thu ag iarraidh am fiosrachadh seo a chur a-null?##
-MixedContentShowAgain=Thoir rabhadh dhomh nuair a bhios mi an impis coimhead air duilleag dhubh-cheilte air a bheil fiosrachadh gun dubh-cheileadh.
-LeaveSecureShowAgain=Thoir rabhadh dhomh nuair a shiubhlas mi o dhuilleag dhubh-cheilte gu tè gun dubh-cheileadh. 
-EnterSecureShowAgain=Thoir rabhadh dhomh nuair a bhios mi an impis coimhead air duilleag dhubh-cheilte.
-WeakSecureShowAgain=Thoir rabhadh dhomh nuair a bhios mi an impis coimhead air duilleag a tha a' cleachdadh dubh-cheileadh de dh'ìre ìseal.
-PostToInsecureFromInsecureShowAgain=Thoir rabhadh dhomh nuair a bhios mi an impis cur a-null fiosrachaidh gun dubh-cheileadh.
+MixedContentShowAgain=Thoir caismeachd dhomh nuair a bhios mi an impis coimhead air duilleag dhubh-cheilte air a bheil fiosrachadh gun dubh-cheileadh.
+LeaveSecureShowAgain=Thoir caismeachd dhomh nuair a shiubhlas mi o dhuilleag dhubh-cheilte gu tè gun dubh-cheileadh. 
+EnterSecureShowAgain=Thoir caismeachd dhomh nuair a bhios mi an impis coimhead air duilleag dhubh-cheilte.
+WeakSecureShowAgain=Thoir caismeachd dhomh nuair a bhios mi an impis coimhead air duilleag a tha a' cleachdadh dubh-cheileadh de dh'ìre ìseal.
+PostToInsecureFromInsecureShowAgain=Thoir caismeachd dhomh nuair a bhios mi an impis cur a-null fiosrachaidh gun dubh-cheileadh.
 SecurityButtonTooltipText=Seall dhomh fiosrachadh tèarainteachd mun duilleag làithreach.
 SecurityButtonMixedContentTooltipText=Rabhadh: tha susbaint gun dearbhadh ann
 Continue=Lean air adhart
