--- a/toolkit/chrome/global/filepicker.properties
+++ b/toolkit/chrome/global/filepicker.properties
@@ -13,7 +13,7 @@ xulTitle=Faidhlichean XUL
 xulFilter=*.xul
 appsTitle=Prògraman
 
-dirTextInputLabel=Ainm a' phasgain:
+dirTextInputLabel=Ainm an eòlaire:
 dirTextInputAccesskey=n
 
 confirmTitle=Dearbhaich
@@ -27,7 +27,7 @@ saveAsLabel=Sàbhail mar:
 errorOpenFileDoesntExistTitle=Mearachd rè fosgladh %S
 errorOpenFileDoesntExistMessage=Chan eil am faidhle %S ann
 errorDirDoesntExistTitle=Mearachd rè inntrigidh do %S
-errorDirDoesntExistMessage=Chan eil am pasgan %S ann
+errorDirDoesntExistMessage=Chan eil an t-eòlaire %S ann
 
 errorOpeningFileTitle=Mearachd rè fosgladh %S
 openWithoutPermissionMessage_file=Cha ghabh am faidhle %S a leughadh
@@ -37,18 +37,18 @@ saveParentIsFileMessage='S e faidhle a tha ann an %S, cha ghabh %S a shàbhaladh
 saveParentDoesntExistMessage=Chan eil an t-slighe %S ann, cha ghabh %S a shàbhaladh
 
 saveWithoutPermissionMessage_file=Chan urrainn dhut sgrìobhadh gun fhaidhle %S.
-saveWithoutPermissionMessage_dir=Cha ghabh am faidhle a chruthachadh. Chan urrainn dhut sgrìobhadh gun phasgan %S.
+saveWithoutPermissionMessage_dir=Cha ghabh am faidhle a chruthachadh. Chan urrainn dhut sgrìobhadh gun eòlaire %S.
 
 errorNewDirDoesExistTitle=Mearachd rè cruthachadh %S
-errorNewDirDoesExistMessage=Tha faidhle ann mu thràth air a bheil %S, cha ghabh am pasgan a chruthachadh.
+errorNewDirDoesExistMessage=Tha faidhle ann mu thràth air a bheil %S, cha ghabh an t-eòlaire a chruthachadh.
 
 errorCreateNewDirTitle=Mearachd rè cruthachadh %S
-errorCreateNewDirMessage=Cha do ghabh am pasgan %S a chruthachadh
-errorCreateNewDirIsFileMessage=Cha do ghabh am pasgan %S a chruthachadh, tha e 'na fhaidhle
-errorCreateNewDirPermissionMessage=Cha do ghabh am pasgan %S a chruthachadh, chan urrainn dhut sgrìobhadh thuige
+errorCreateNewDirMessage=Cha do ghabh an t-eòlaire %S a chruthachadh
+errorCreateNewDirIsFileMessage=Cha do ghabh an t-eòlaire %S a chruthachadh, tha e 'na fhaidhle
+errorCreateNewDirPermissionMessage=Cha do ghabh an t-eòlaire %S a chruthachadh, chan urrainn dhut sgrìobhadh thuige
 
-promptNewDirTitle=Cruthaich pasgan ùr
-promptNewDirMessage=Ainm a' phasgain:
+promptNewDirTitle=Cruthaich eòlaire ùr
+promptNewDirMessage=Ainm an eòlaire:
 
 errorPathProblemTitle=Mearachd neo-aithnichte
 errorPathProblemMessage=Thachair mearachd neo-aithnichte (slighe %S)
