--- a/toolkit/chrome/global/xpinstall/xpinstall.properties
+++ b/toolkit/chrome/global/xpinstall/xpinstall.properties
@@ -123,7 +123,7 @@ error-244=Pacaid nach eil taic ann dha
 error-260=Cha deach cur ris an ainm a dhearbhadh.
 error-261=Faidhle hais mì-dhligheach (truailleadh rè an luchdaidh a-nuas 's dòcha)
 error-262=Seòrsa de dh'fhaidhle hais a tha neo-aithnichte no mì-dhligheach
-error-299=Gun chuimhne
+error-299=Dh'fhalbh a' chuimhne air
 
 # there are other error codes, either rare or obsolete,
 # that are not worth translating at this time.
