some terminology consistency fixes, align plurals now theyre implemented, trying to sort the Update string problem

--- a/browser/installer/override.properties
+++ b/browser/installer/override.properties
@@ -85,7 +85,7 @@ FileError=Mearachd ann am fosgladh faidhle a chum sgrìobhaidh: \r\n\r\n$0\r\n\r
 FileError_NoIgnore=Mearachd ann am fosgladh faidhle a chum sgrìobhaidh: \r\n\r\n$0\r\n\r\nBriog air "Retry" gus feuchainn ris a-rithist no\r\n"Ignore" gus leum a ghearradh thairis air an fhaidhle seo.
 CantWrite="Cha ghabh na leanas a sgrìobhadh: "
 CopyFailed=Dh'fhàillig an lethbhreac
-CopyTo="Dèan lethbhreac gu "
+CopyTo="Cuir lethbhreac gu "
 Registering="A' clàrachadh: "
 Unregistering="A' dì-chlàrachadh: "
 SymbolNotFound="Cha deach an samhla a leanas a lorg: "
