--- a/dom/chrome/nsWebBrowserPersist.properties
+++ b/dom/chrome/nsWebBrowserPersist.properties
@@ -35,7 +35,7 @@
 #
 # ***** END LICENSE BLOCK *****
 
-readError=Cha do ghabh %S a shàbhaladh a chionn 's nach do ghabh am faidhle tùsail a leughadh.\n\nFeuch ris a-rithist an ceann tàmaill no leig fios gu rianaire an fhrithealaiche.
+readError=Cha do ghabh %S a shàbhaladh a chionn 's nach do ghabh bun-tùs an fhaidhle a leughadh.\n\nFeuch ris a-rithist an ceann tàmaill no leig fios gu rianaire an fhrithealaiche.
 writeError=Cha do ghabh %S a shàbhaladh a chionn 's gun do thachair mearachd neo-aithnichte.\n\nFeuch ri a shàbhaladh am badeigin eile.
 launchError=Cha do ghabh %S fhosgladh a chionn 's gun do thachair mearachd neo-aithnichte.\n\nFeuch ri a shàbhaladh air an diosg an toiseach 's fhoasgladh an uairsin.
 diskFull=Chan eil àite gu leòr air an diosg gus %S a shàbhaladh.\n\nThoir air falbh faidhlichean air nach eil feum tuilleadh agus feuch ris a-rithist no feuch ri a shàbhaladh am badeigin eile.
