--- a/browser/chrome/browser/sidebar/sidebar.properties
+++ b/browser/chrome/browser/sidebar/sidebar.properties
@@ -1,2 +1,2 @@
 addMicsumGenConfirmTitle=Cuir cruthaichear mhion chunntasan ris
-addMicsumGenConfirmText=A bheil thu airson an cruthaichear mhion chunntasan a leanas a chur ris?\n\n\vTobar: %S
+addMicsumGenConfirmText=A bheil thu airson an cruthaichear mhion chunntasan a leanas a chur ris?\n\n\vBun-tùs: %S
