--- a/toolkit/chrome/global/console.properties
+++ b/toolkit/chrome/global/console.properties
@@ -1,6 +1,6 @@
 typeError=Mearachd:
 typeWarning=Rabhadh:
-errFile=Am faidhle tùsail: %S
+errFile=Bun-tùs an fhaidhle: %S
 errLine=Loidhne: %S
 errLineCol=Loidhne: %S, colbh: %S
-errCode=An còd tùsail:
+errCode=Bun-tùs a' chòd:
