--- a/toolkit/chrome/global/viewSource.properties
+++ b/toolkit/chrome/global/viewSource.properties
@@ -5,5 +5,5 @@ invalidInputText  = Tha àireamh na loidhne a chuir thu a-steach mì-dhligheach.
 outOfRangeTitle   = Cha deach an loidhne a lorg
 outOfRangeText    = Cha deach an loidhne a shònraich thu a lorg.
 statusBarLineCol  = Loidhne %1$S, Colbh %2$S
-viewSelectionSourceTitle = Tùs DOM na thagh thu
-viewMathMLSourceTitle    = Tùs DOM MathML
+viewSelectionSourceTitle = Bun-tùs DOM na thagh thu
+viewMathMLSourceTitle    = Bun-tùs DOM MathML
